공부한거추가

--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -41,15 +41,16 @@
 
 - 데코레이터 패턴 (스타벅스!)
   - 객체에 추가적인 요건을 동적으로 첨가하는 패턴(객체를 새로운것을 추가하여 장식해준다!). 데코레이터는 서브클래스를 만드는것을 통해서 기능을 유연하게 확장가능 
-    - 간단한 정리
-      - 무언가 계속 추가되는(기존의 것에 얹어서)것이 있다면 데코레이터 패턴을 생각하라(기존 구상 클래스가 있는것을 없애는것이 아니다.. 기존 구상클래스에 새로운 무언가가 필요해서 덧붙이는것이다)
-      - 구상 구성요소를 감싸는 데코레이터가 필요
-      - 데코레이터가 전달받는 구상 구성요소의 super class와 데코레이터의 super class는 동일한 인터페이스를 구상한것이다
-      - 데코레이터를 구현한 클래스의 인스턴스변수에는 데코레이터의 가장 추상화된 인스턴스(혹은 추상클래스)를 생성자로 전달받는다..(당연히 그래야지 넘겨받는 구상클래스에서 했던 내용에 추가할수있겠지..)
-      - 데코레이터를 통해 새로운 기능을 더하여 장식하는 개념임
-      - 가장 큰 장점은 기존 소스 건드리지않고 원하는기능을 추가해줄수있음!(기존 자바IO에서 모든 문자열을 소문자로 바꾸게하는 Wrapper클래스를 만들수있다!)
-      - 데코레이터 패턴을 사용하면 자잘한 객체들이 매우 많이 추가될수있고(특히 그러다보면 중간에 필수적으러 넣어야할 구상객체를 놓칠수도있음..), 데코레이터를 너무 많이 사용하면 코드가 필요이상으로 복잡해진다!
-        - 이런 부분을 보완해주는것이 팩토리패턴과 빌드패턴
+  - 인터페이스 바꾸지않고 책임(기능)만 추가됨!
+  - 간단한 정리
+    - 무언가 계속 추가되는(기존의 것에 얹어서)것이 있다면 데코레이터 패턴을 생각하라(기존 구상 클래스가 있는것을 없애는것이 아니다.. 기존 구상클래스에 새로운 무언가가 필요해서 덧붙이는것이다)
+    - 구상 구성요소를 감싸는 데코레이터가 필요
+    - 데코레이터가 전달받는 구상 구성요소의 super class와 데코레이터의 super class는 동일한 인터페이스를 구상한것이다
+    - 데코레이터를 구현한 클래스의 인스턴스변수에는 데코레이터의 가장 추상화된 인스턴스(혹은 추상클래스)를 생성자로 전달받는다..(당연히 그래야지 넘겨받는 구상클래스에서 했던 내용에 추가할수있겠지..)
+    - 데코레이터를 통해 새로운 기능을 더하여 장식하는 개념임
+    - 가장 큰 장점은 기존 소스 건드리지않고 원하는기능을 추가해줄수있음!(기존 자바IO에서 모든 문자열을 소문자로 바꾸게하는 Wrapper클래스를 만들수있다!)
+    - 데코레이터 패턴을 사용하면 자잘한 객체들이 매우 많이 추가될수있고(특히 그러다보면 중간에 필수적으러 넣어야할 구상객체를 놓칠수도있음..), 데코레이터를 너무 많이 사용하면 코드가 필요이상으로 복잡해진다!
+      - 이런 부분을 보완해주는것이 팩토리패턴과 빌드패턴
 
 - 팩토리패턴(PIZZA)
   - 팩토리 메소드패턴
@@ -77,10 +78,26 @@
   - 요구사항을 객체로 캡슐화 가능, 매개변수를 써서 여러 가지 다른 요구사항을 집어넣을수도있으며, 요청 내역을 큐에 저장하거나 로그로 기록할수도있으며, 작업 취소기능도 지원가능..
   - 간단한 정리
     - 인보커
-      - 커맨더 인터페이스를 실행하는역할
+      - 커맨더 인터페이스를 실행하는역할(커맨드 인터페이스를 ***구성***)
       - 커맨더를 통해서 리시버의 실행을 요청함
       - 중요한것은 커맨더로 무언가를 실행하는것은 알지만 구체적으로 무엇을 실행하는지는 인보커에서 알지못함
     - 커맨더
       - 일반적으로 execute함수만을 인터페이스로 가지며, 이를 구현하게되면 실제로 명령을 실행할 대상(리시버)을 execute함수내부에서 호출한다
+	  - 추가적인 행동들이 필요한경우(ex. undo, store, load 등) 커맨드 인터페이스에 추가적인 행동들을 명시하여 구현하도록 하는것도 있으니 잘 알아둘것!
     - 리시버
       - 구체적으로 실행할 대상
+	  - 커맨드 인터페이스를 ***구현***함
+	- 메소드를 커맨드 객체로 캡슐화하는것!
+	- 요청을 하는 객체와 그 요청을 수행하는 객체를 분리시키고 싶을때 사용하면된다!
+	
+- 어뎁터패턴
+  - 한 클래스의 인터페이스를 클라이언트에서 사용하고자 하는 다른 인터페이스로 변환하는 패턴. 어댑터를 이용하면 인터페이스 호환성 문제때문에 같이 쓸수 없는 클래스들을 연결해서 사용가능
+  - 클라이언트에서 필요로하는 인터페이스로 적응 시키는것이 목적!(adapter!)  
+  - 간단한 정리
+    - 어뎁터 클래스는 타겟인터페이스로 ***구현*** 되고, 어뎁티 인터페이스를 ***구성*** 한다.(어뎁티되는 객체를 생성자나 메소드로 받아옴. 어뎁터가 어뎁티를 감싼다고 표현) 
+	- 이를 통해, 클라이언트 입장에서는 타겟 인터페이스만 보고 실행하게되므로 어뎁터 내부의 동작은 신경쓸 필요가없다! 즉, 어뎁터 클래스로 연결해주는 작업이 있을뿐 기존 소스를 건드릴 필요는없다!
+
+- 퍼사드
+  - 인터페이스를 변경하는 패턴
+  - 하나 이상의 클래스의 복잡한 인터페이스를 변경(즉, 퍼사드(외관)을 신경쓰는것)
+  - 클라이언트에게 복잡한 서브시스템을 간단하게 제공하기위한 목적
