--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -13,16 +13,30 @@
   - OCP(Opne Close Principle) : 클래스는 확장에는 열려있고, 코드 변경에는 닫혀있어야한다 
     - 모든 부분에 이렇게 사용가능하지는않다! 그리고 이것을 적용하려하면 소스코드만 복잡해질뿐이다. 최대한 바뀔확률이 높은 부분을 중점적으로 살펴보고 원칙을 적용하는것이 좋다!
   - 의존성 뒤집기 원칙(Dependcy Inversion Principle)
-    - 구상클래스에 의존하는것이 아닌(new 범벅..), 추상화된것에 의존하도록 만들기!  
-
+    - 구상클래스에 의존하는것이 아닌(new 범벅..), 추상화된것에 의존하도록 만들기! 
+  - 최소 지식 원칙
+    - 친한 친구하고만 얘기하기!(변경이 일어났을때, 연쇄적으로 변경하는것을 막기위함)
+    - >여러 객체하고 인연 맺는것을 피하는방법(아래 종류의 객체만 메소드에서 호출하면됨!) <br> 1) 객체 자체 <br> 2) 메소드에 매개변수로 전달된 객체 <br> 3) 그 메소드에서 생성하거나 인스턴스를 만든객체 <br> 4) 그 객체에 속하는 구성요소(멤버변수)
+  - 헐리우드 원칙
+    - "먼저 연락하지마세요. 저희가 연락드리겠습니다"
+    - 저수준 구성요소들은 고수준 구성요소에서 사용할지를 결정하고, 저수준 구성요소는 고수준 구성요에 접근하지 못하게하는것!
+    - 즉, 고수준 구성요소가 저수준 구성요소에게 먼저 연락하지말라고 하는것이다!
+    - 예를들어, 템플릿 메소드 패턴에서 추상클래스에서 알고리즘을정의한 템플릿메소드는 추상메소드를 정의한 서브클래스를 호출하지만, 서브클래스에서는 본인보다 상위인 추상클래스의 메소드를 호출하지않도록한다!
+    - 팩토리, 옵저버 등도 헐리우드 원칙
+  - 클래스를 바꾸는 이유는 한 가지 뿐이어야한다 (직역해서 그런건지.. 내용이랑은 매칭이잘..)
+    - 최대한 한 클래스에서는 한가지 역할만수행하도록! (응집도 높다!! 응집도가 높다는것은 역할이 여러개 모여있다는것이 아니라, 필수적이고 필요한 연관된것만 모여있다는것이다!!)
+    - 한 클래스에 여러 역할들을 담당하고있으면 고쳐야하는 부분이 상호간에 연관될수있음..
+     
 - 스트레이티지 패턴 (DUCK)
   - 알고리즘군을 정의하고 이를 캡슐화하여 원하는 알고리즘(알고리즘군을 구성하는)을 교체할수있도록(동적으로도가능) 만들어주는 패턴
   - 간단한 정리
-    - 변경이 자주 일어나는부분을 인터페이스화
+    - 변경이 자주 일어나는부분을 인터페이스화(행동을 캡슐화)
+      - 예를들어, 날아가는 행동을 하는 부분을 인터페이스로만들어놓고 이를 클래스에 "구성"함으로써 언제든지 변경이 가능하도록해줌(set함수로 해당 인터페이스의 구상클래스를 변경할수있도록) 
     - 해당 인터페이스를 인스턴스 변수에 정의
     - 이를 구성하고 있는 추상클래스는 해당 인터페이스에 정의되어있는 함수를 실행해줌
     - 또한 동적으로 인스턴스를 변경할수있도록 setter 메소드를 활용
     - => 핵심은 "쉽게 확장/변경 가능하도록 캡슐화", "동적으로 확장/변경 가능"
+    - 실제 행동은 다른 객체에 위임!
 
 
 - 옵저버 패턴 (기상정보 화면에 보여주기)
@@ -101,3 +115,105 @@
   - 인터페이스를 변경하는 패턴
   - 하나 이상의 클래스의 복잡한 인터페이스를 변경(즉, 퍼사드(외관)을 신경쓰는것)
   - 클라이언트에게 복잡한 서브시스템을 간단하게 제공하기위한 목적
+  - 고수준 인터페이스를 정의하는것! 서브시스템을 더쉽게 이용가능!(서브시스템에는 다양한 인터페이스들이 있음! 물론 1개일수도있고)
+  - 한 서브시스템에서 여러 퍼사드를 만들어도됨
+  
+- 템플릿 메소드 패턴
+  - 특정 메소드를 통해서 템플릿이 정해짐(템플릿이란 무언가를 만들기위해 정형화시켜놓은것인데, 이를 위한 메소드 패턴이 템플릿 메소드패턴)
+  - 템플릿 메소드 안에 정의해야할 메소드들이(알고리즘의 각 단계들) 있을텐데, 이는 서브클래스에서 정의
+  - 알고리즘의 골격을 정의하며, 알고리즘의 여러단계중 일부는 서브클래스에서 구현하도록 만드는 패턴
+  - ***후크***를 사용할수있음
+    - 후크는 기본적인 내용만 구현되어있거나 아무코드도 들어있지않은 코드임
+    - 서브클래스에서 이에 대한 별도의 오버라이딩이없다면 템플릿 메소드에서제공한 디폴트로 실행됨
+    - 그렇지않다면 특정 행동(메소드)을 하도록 혹은 하지 못하도록 만들수있음
+    - 후크를 통해서 특정행동(메소드)을 할지말지를 결정하도록 가능(알고리즘 진행상황을 변경가능!)
+    - 알고리즘의 단계에서 차이가 나는부분을 후크로 만들어도 좋을듯
+  - 간단한 정리
+    - 알고리즘을 정의한 메소드(템플릿메소드)는 보통 final변수로 선언하여 서브클래스에서 고칠수없도록 만들어준다
+    - 코드 재사용에있어서 크게 도움이 됨
+    - 템플릿 메소드가 들어있는 추상클래스에서는 구상메소드, 추상메소드, 후크를 정의할수있음
+      - 구상메소드도 변경을 막아야한다면 final로 선언!
+    - Arrays.sort() 또한 템플릿 메소드 패턴이나, 교과서적인 방식은 아님.. 하지만 분명한것은 strategy패턴은 아님
+    - 스트레이티지패턴과 템플릿메소드 패턴 모두 알고리즘을 캡슐화하는 패턴이지만, 전자는 상속을 사용하고 후자는 구성을 사용함
+    - 팩토리 메소드 패턴은 특화된 템플릿 메소드 패턴! (유사하다 싶더니만..)
+
+- 이터레이터 패턴
+  - 컬렉션 구현 방법을 노출시키지 않으면서도 그 집합체 안에 들어있는 모든 항목에 접근할수 있게 해주는 방법을 제공하는 패턴
+  - 간단한 정리
+    - 이를 활용하면 어떤 컬렉션으로 구성되어있는지는 알 필요 없음(클라이언트에게 컬렉션을 노출하지않음) 
+    - 이터레이터는 외부반복자라고 부른다
+      - 외부 반복자란 클라이언트가 반복작업을 제어하는것을 의미한다
+      - 반대로 내부 반복자란 클라이언트가 해야할 작업을 전달하면 알아서 내부에서 반복자를 통해서 작업을 진행하는것이다(ex. foreach)
+    - 컬렉션에서 iterator()는 자신을 위한 반복자(Iterator)를 반환해준다. 물론 이것이 어떻게 구성되어있는지는 클라이언트 입장에서는 알 필요가 없다.
+    - 이를 통해 컬렉션에서 반복작업하는 역할을 분리시킬수있음!
+
+- 컴포지트 패턴 (Composite란 합성물이라는 뜻)
+  - 객체들을 트리구조로 구성하여 부분과 전체를 나타내는 계층구조로 나타내는 패턴 
+  - 클라이언트에서 개별객체와 다른 객체들로 구성된 복합 객체를 똑같은 방법으로 다룰수 있음
+  - 간단한 정리
+    - 부분과 전체를 모두 관리할수있음
+    - 구성요소(Component)에는 복합객체(Composite)와 잎(leaf) 이 있는데, 복합객체는 또 다른 구성요소를 가지게된다.(재귀!)
+    - Component를 보면 leaf에서 필요한 요소와 복합객체에서 필요한 요소 둘다를 가지고있게되기때문에, 복합객체 입장에서는 불필요한 메소드들이 있을수있다.(leaf도 마찬가지)
+    - 이렇게 Component가 leaf의 역할도하고 복합객체의 역할도 하기때문에, 컴포지트패턴은 단일 역할 원칙을 깨면서 투명성을 확보하기 위한 패턴이다
+      - 투명성이란, 클라이언트 입장에서 요놈이 복합객체인지 잎인지 알수없는것을 이야기한다.(역할이 명백하지않다.) 
+      - 이에반대되는게 안정성인데, 이 안정성을 위해서 instanceof 와 같은 연산자를 통해서 확인은 가능하나 투명성이 떨어지게된다.
+    - 자식 노드가 부모노드에 대한 포인터를 집어넣어서 부모노드를 불러올수도있음
+    - 복합구조가 너무 복잡한경우 계산결과를 캐싱하도록 구현할수도 잇음(***알고리즘 기억나면 적어놓기..***)
+    - 컴포지트 패턴과 이터레이터를 잘 구현하면 여러 계층의 컴포지트 패턴에서 외부반복자를 활용하여 특정 노드를 찾아낼수도있음(stack쓰고 난리 치는데, 요거를 잘 활용하면 좋을듯)
+
+- 스테이트 패턴
+  - 객체의 내부 상태가 바뀜에 따라서 객체의 행동을 바꿀수있는 패턴. 마치 객체의 클래스가 바뀌는것과 같은 결과를 얻을수있음 (상태값을 원시타입으로 0,1,2.. 로만 사용한다는 생각을 바꿔라!)
+  - 간단한 정리
+    - 특정 상태별로 행동을 진행한다면(하나의 메소드에 if문으로 상태에따라 행동정의), 스테이트 패턴을 사용하여 상태클래스 안에 행동들을 구현하는 식으로 만들수있음..!(생각을 뒤집어라..!)
+    - 상태가 계속 바뀐다면 이 부분을 캡슐화하는개념! 즉, 상태가 추가되면 메소드마다 if문 추가해서 작업하는것이아닌, 상태클래스 하나를 더 추가! 이를 통해서 OCP룰을 지킨다! (if문으로 더럽히는거 방지 또한 가능)
+    - 이제 상태는 원시타입이 아닌, 클래스로 가져간다!(상태가 변하는것은 0,1,2 이런식이 아니라 클래스 자체가 계속 변화되는것! 하지만 같은 인터페이스를 가지고있으니 타입은 동일하겠지!)
+    - 클라이언트 입장에서는 상태객체는 몰라도 됨.. Context객체가 알아서 행동에 따라 State객체를 변경시킴. 무튼, 상태에 따라 State 객체가변경된다!(State 인터페이스를 구현한 클래스가 특정행동 이후에 변경(특정행동 이후에 상태가 변경되니깐. 상태가 변경된다는것은 당연 객체가 변경된는다는것. 상태변경시 Context객체에게 상태변경을 요청하거나 직접 변경된 상태객체를 넘겨줄수도있음))
+    - ***스트레이티지 패턴과의 차이가있는데, 스트레이티지 패턴에서는 클라이언트가 전략객체를 set하게됨. 즉, 어떤 객체를 사용할것인지 분명하게 알고잇음.. 구성을 통해 원하는 행동을 정의!***
+    - Context객체에서 현재상태(이는 클래스임)에게 행동을 위임
+
+- 프록시 패턴
+  - 어떤 객체에 대한 ***접근을 제어***하기 위한 용도로 대리인이나 대변인에 해당하는 객체를 제공하는 패턴
+  - 간단한 정리
+    - 대리자역할임! 클라이언트가 요청하는 작업을 proxy를 통해서 대신 호출한다(request -> proxy -> real_request)
+      - 어떻게 보면 RealSubject의 메소드 호출을 중간에 가로채는것!
+    - 이를 통해서 메소드 접근을 제어할수도 있고, 지연된 객체 생성 가능하고, 시간이 걸리는것은 별도 스레드를 사용하여 진행하도록 proxy에서 사용해서 어플리케이션에 중단이 없도록 만들수도있음!
+    - 구조는 상당히 심플함.. subject 인터페이스를 proxy와 realSubject가 구현하고, 클라이언트는 proxy객체를 호출하는것!
+      - Proxy와 RealSubject는 동일한 인터페이스를 구현하기때문에, RealSubject가 들어갈 자리라면 언제든지 Proxy를 대신 집어넣을수있음!
+    - RMI에서는 원격 서버의 메소드를 대신 호출하는것이 프록시(스터브) 역할 (사이트 참고 : https://selfdevelope.tistory.com/521 , https://channelofchaos.tistory.com/93)
+    - 팩토리를 사용해서 프록시를 보통 만든다함.. 타입이 똑같으므로 프록시인지 RealSubject인지 클라는 모름 ㅎ
+    - ***데코레이터 패턴이랑은 다른데, 프록시는 단순히 객체를 감싸는것이 아니기 때문이다. 프록시는 진짜 객체의 생성도 늦게만들게 해주는 패턴도 있다. 객체를 감싸는것도 만들수는 있겠지만 항상 감싸는것은 아니다! 중요한것은 대리자라는것!***
+    - 종류
+      - 원격프록시 : 다른 JVM에 들어있는 객체를 대신 호출해줌
+      - 가상프록시 : 생성하는데 많은 비용이 드는 객체를 대신하는 역할. 진짜 객체가 필요하게 되기 전까지 객체의 생성을 미루기도하고, 객체 생성전 또는 객체 생성도중에 객체를 대신하기도한다.(아직 실제 객체를 부르기전까지 프록시에서 임시로 특정 작업을 해줌..) RealSubject가 완성되면 이에대한 결과를 전달해줌 (ICON예제)
+      - 방화벽 프록시 : 네트워크 자원에 대한 접근을 제어.. (기업용 방화벽 시스템에서 사용)
+      - 스마트 레퍼런스 프록시 : 주 객체가 참조될때마다 추가 행동을 제공. ex) 객체에 대한 레퍼런스 개수를 센다 ()
+      - 캐싱 프록시 : 비용이 많이 드는 작업의 결과를 임시로 저장. 여러 클라에게 결과를 공유하게 해줌으로써 계산시간 또는 네트워크 지연을 줄여주는 효과 (웹 서버 프록시 또는 콘텐츠 관리 및 퍼블리싱 시스템에서 주로 사용)
+      - 동기화 프록시 : 여러 스레드에서 주 객체에 접근 하는 경우에 안전하게 작업을 처리할 수 있게 해줌 (자바스페이스?)
+      - 복잡도 숨김 프록시 : 퍼사드 프록시라고도 불림. 복잡한 클래스의 접근을 제어하고 복잡도를 숨겨줌..
+      - 지연복사 프록시 : 클라이언트에서 필요로 할 때까지 객체가 복사되는것을 지연시킴으로써 객체의 복사를 제어. 변형된 가상 프록시. (CopyOnWriteArrayList에서 볼수있다함.. 그런데 난 못찾음..)
+      - 
+    
+
+
+
+---
+- 용어 정리
+  - 캡슐화 : 관련된 데이터와 함수들을 묶는 단위
+    - 특성
+      - 추상화 단위가 됨
+        - 캡슐화를 하면 추상화가 된다고 볼수있는데, 캡슐화를 하게되면 관련된 데이터와 함수들을 하나의 캐슙 단위로 묶어주기 때문에 복잡한 내용들은 캡슐 내부속으로 숨어버리게 되고, 외부에는 캡슐단위의 의미 있는 단위로만 보여주기때문에 추상화 단위 또한 된다
+      - 정보은닉 가능
+        - 캡슐화를 통해 인터페이스를 제외한 데이터와 함수들을 캡슐속으로 숨기기 때문에 캡슐화를 통해 정보은닉 가능
+        - 객체간에는 상대방의 인터페이스만을 보게되므로 실제 내부의 로직은 알수도, 알 필요도 없음!
+      - 재사용성에 굿
+        - 캡슐화의 단위는 클래스 단위이기때문에, 클래스를 통해 객체단위로 생성되어 움직이게됨 (함수단위보다 굿)
+      
+  - 추상화 : 복잡한 문제를 다루기 위해서 불필요한 부분들은 숨기고 중요한 부분만을 표현하는것을 의미
+  - 정보은닉 : 데이터와 함수들을 외부에 노출시키지않고 내부에 숨기는것!( ex. private 접근자)
+    - 객체의 구체적인 타입 은닉(= 상위 타입 캐스팅) **인터페이스나 추상클래스 사용하는거이야기하는듯?**
+    - 객체의 필드 및 메소드 은닉(= 캡슐화) 
+    - 구현 은닉(= 인터페이스 및 추상 클래스 기반의 구현)
+
+  https://frontierdev.tistory.com/93#:~:text=%EC%BA%A1%EC%8A%90%ED%99%94%EC%99%80%20%EC%A0%95%EB%B3%B4%EC%9D%80%EB%8B%89%EC%9D%98,%EC%99%B8%EB%B6%80%EC%97%90%20%EC%88%A8%EA%B8%B0%EB%8A%94%20%EC%9E%A5%EC%B9%98%EC%9D%B4%EB%8B%A4.&text=%EC%9E%90%EB%B0%94%EC%9D%98%20%EC%BA%A1%EC%8A%90%ED%99%94%20%EA%B5%AC%ED%98%84%EC%9D%80,%EC%A0%95%EB%B3%B4%EC%9D%80%EB%8B%89%EC%9D%84%20%EA%B5%AC%ED%98%84%ED%95%9C%EB%8B%A4.
+
+  https://yongdev.tistory.com/131
