공부한거 추가
1. git 정리 추가
2. junit, mockito 추가
3. 디자인패턴 추가
4. 디자인패턴 자바소스 추가

--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -98,11 +98,14 @@
     - 커맨더
       - 일반적으로 execute함수만을 인터페이스로 가지며, 이를 구현하게되면 실제로 명령을 실행할 대상(리시버)을 execute함수내부에서 호출한다
 	  - 추가적인 행동들이 필요한경우(ex. undo, store, load 등) 커맨드 인터페이스에 추가적인 행동들을 명시하여 구현하도록 하는것도 있으니 잘 알아둘것!
+      - 커맨드 인터페이스를 ***구현***함
     - 리시버
       - 구체적으로 실행할 대상
-	  - 커맨드 인터페이스를 ***구현***함
+	<br><br>  
 	- 메소드를 커맨드 객체로 캡슐화하는것!
 	- 요청을 하는 객체와 그 요청을 수행하는 객체를 분리시키고 싶을때 사용하면된다!
+	- 인보커를 사용해서 인보커에 구성되어있는 커맨더를실행.. 커맨더는 리시버의 특정 행동을 실행<br> 결국, 인보커는 리시버가 어떤 행동을 하는지 자세히는 알수없으나, 행동을 실행은 시켜주는놈..<br> 하나의 리시버에 여러개의 커맨더를 가질수있으며, 이러한 여러 커맨더를 통해서 리시버의 행동의변화를 추가하는데 용이함..<br> 리시버의 하나의 행동만을 분리시킬수있음.. 그래서 어디서든 이를 사용할수있음!!
+	- 커맨드가 행동 하나만을 정의하니, undo메소드와같은경우 핸들링이 쉽고(이놈의상태를 확인하는 작업필요없음), 특정 명령에 일련의 행동들을 나타내야할때도 재사용이 좋음
 	
 - 어뎁터패턴
   - 한 클래스의 인터페이스를 클라이언트에서 사용하고자 하는 다른 인터페이스로 변환하는 패턴. 어댑터를 이용하면 인터페이스 호환성 문제때문에 같이 쓸수 없는 클래스들을 연결해서 사용가능
@@ -191,11 +194,47 @@
       - 동기화 프록시 : 여러 스레드에서 주 객체에 접근 하는 경우에 안전하게 작업을 처리할 수 있게 해줌 (자바스페이스?)
       - 복잡도 숨김 프록시 : 퍼사드 프록시라고도 불림. 복잡한 클래스의 접근을 제어하고 복잡도를 숨겨줌..
       - 지연복사 프록시 : 클라이언트에서 필요로 할 때까지 객체가 복사되는것을 지연시킴으로써 객체의 복사를 제어. 변형된 가상 프록시. (CopyOnWriteArrayList에서 볼수있다함.. 그런데 난 못찾음..)
-      - 
+       
     
-
-
-
+- 부록
+  - 브릿지 패턴
+    - 구현뿐만 아니라 추상화된 부분까지 변경시켜야하는 경우
+    - 구현해야하는 대상을 인터페이스로 만들고 이를 구성으로 가져감 + 추상된부분 변경이 필요하다면 추상클래스를 상속하여 변경이 필요한 부분을 구현
+      - => 두개의 계층구조(기존에 추상화된 부분 + 기존 구현부를 나타냈던 부분을 인터페이스를 사용함으로 생기는 부분)가 생기게됨! 이 둘의 관계를 브릿지 라고 부름.
+    - 장점
+      - 구현을 인터페이스에 완전히 결합시키지 않았기때문에 구현과 추상회된 부분을 분리가능(브릿지 관계)
+      - 추상화된 부분과 실제 구현부분을 독립적으로 확장 가능(계층이 따로 분리되어있는 상태이므로가능)
+      - 추상화된 부분을 구현한 구상 클래스를 바꿔도 클라이언트 쪽에는 영향 끼치지않음(추상화된 부분의변경 요청이 있을때 구상클래스를 통해 확장가능하며 기존 클라이언트 쪽에 영향 없음)
+    - 단점
+      - 디자인 복잡해짐...
+  - 빌더 패턴
+    - 장점
+      - 복합객체가 생성되는 과정을 캡슐화
+      - 클라이언트 입장에서는 추상 인터페이스만 볼 수 있기때문에 제품을 구현한 코드를 쉽게 바꿀수있음
+      - 제품의 내부구조를 클라로부터 보호가능
+      - 여러 단계와 다양한 절차를 통해서 객체를 만들 수 있음  
+    - 단점
+      - 팩토리를 사용하는 경우에 비해 객체를 만들기 위해서 클라이언트에 대해 더 많이 알아야함(무슨말???)
+  - 역할 사슬 패턴
+    - 한 요청을 두개 이상의 객체에서 처리하고 싶을때 사용
+    - Netty에서 파이프라인의 핸들러들이 이러한 패턴으로 구현되어잇는듯함
+    - 장점
+      - 요청을 보내는쪽과 받는쪽을 분리할수있음 (Netty에서는 이벤트가 발생하면(이벤트 루프에서 이벤트에대한 요청이 들어오면) 파이프라인을 타게됨)
+      - 객체에서는 사슬의 구조를 몰라도 되고 그 사슬에 들어있는 다른 객체에 대한 직접적인 레퍼런스를 가질 필요가 없음(Netty에서는 handler에 prev, next가 담겨져있음.. 핸들러 하나의 입장에서 핸들러 전체를 알 필요는 없지만 다음 혹은 이전의 핸들러를 알아서 그 다음 핸들러에게 이벤트를 전달하는 방식임)
+      - 사슬에 들어가는 객체를 바꾸거나 순서를 바꿈으로써 역할을 동적으로 추가/제거 가능 
+    - 단점
+      - 실행시 디버깅에대한 어려움이있음
+      - 요청이 적절하게 처리가 되도록 객체가 만들어지지않았다면 사슬끝까지 갔음에도 처리못할수잇음..  
+  - 미디에이터 패턴
+    - 서로 관련된 객체 사이의 복잡한 통신과 제어를 한곳으로 집중시키고자 하는 경우, 미디에이터 패턴을 사용
+    - 각각의 상태에 따라 특정 객체의 행동을 요청한다면, 그리고 이에대한 얽혀있는 객체가 많아진다면 이를 반드시 고려해볼것
+    - 각 객체의 상태가 바뀜에 따라 미디에이터에게 알려주고, 미디에이터는 이에대한 적절한 응답을 함(필요객체에 행동요청)
+    - 장점
+      - 시스템하고 각 객체를 분리시킴으로써 재사용성을 획기적으로 향상
+      - 제어 로직을 한군데 모아놨기 때문에 관리하기가 수월
+      - 객체사이의 오가는 메시지의 종류를 확 줄이고 단순화 가능
+    - 단점
+      - 디자인 잘 못하면 미디에이터 객체 자체가 너무 복잡해질수 있음
 ---
 - 용어 정리
   - 캡슐화 : 관련된 데이터와 함수들을 묶는 단위
