스터디 추가

--- a/java/spring/스프링 프레임워크 핵심기술.md
+++ b/java/spring/스프링 프레임워크 핵심기술.md
@@ -123,4 +123,49 @@ public static void main(String[] args) {
         - | (or)
 
 - IoC 컨테이너 6부 : Environment 2부. 프로퍼티
-  - 
+  - 프로퍼티
+	- 다양한 방법으로 정의할수있는 설정값
+	- Environment를 통해서 소스설정 및 프로퍼티 값 가져올수 있다!
+    - 프로퍼티에는 우선순위가 있으며, 계층형으로 
+	- 스프링에서 @PropertySource를 통해서 Environment의 프로퍼티를 추가할수있음!
+	- Environment를 기반으로 SpringBoot에서는 @Value로 해당 프로퍼티값을 가져올수있음!
+	
+- IoC 컨테이너 7부 : MessageSource
+  - MessageSource : 국제화(i18n) 기능을 제공하는 인터페이스
+	- ApplicationContext는 MessageSource를 상속받고있음..
+	- 스프링부트 사용시 property의 이름만 적절히 지정하면 알아서 인식..
+	  - messages.properties
+	  - messages_ko_kr.properties(MessageSource.getMessage에서 Locale을 KO_KR로 설정하면 이거 읽어옴)
+	- Reloading기능이있는 메세지 소스 사용도 가능 
+```java
+@Bean
+public MessageSource messageSource() {
+	var messageSource = new ReloadableResourceBundleMessageSource();
+	messageSource.setBasename("classpath:/messages");
+	messageSource.setDefaultEncoding("UTF-8");
+	messageSource.setCacheSeconds(3);
+	return messageSource;
+}
+```
+
+- IoC 컨테이너 8부 : ApplicationEventPublisher
+  - ApplicationEventPublisher : 이벤트프로그래밍에 필요한 인터페이스 제공. 옵저버패턴구현
+    - ApplicationContext는 ApplicationEventPublisher 를 상속받고있음,,
+	  - ApplicationEventPublisher.publishEvent(Object obj)
+	  - ApplicationEventPublisher.publishEvent(ApplicationEvent event) //4.2이하
+	- 이벤트처리방법
+	  - @EventListener 어노테이션을 사용하여 특정 이벤트처리가능 
+	  - 기본적으로는 synchronized.. 여러곳에서 동일한 이벤트를 listen 하고있으면 순차적으로 실향
+        - 순서정하고싶으면 @Order를 사용하면됨
+        - 비동기로 실행하고싶다면 @Async (@Async를 사용하기위한 @EnabledAsync와 되도록이면 @Async사용을 위한 스레드풀도 설정해줄필요있음)
+    - 스프링이 제공하는 기본이벤트
+	  - ContextRefreshedEvent: ApplicationContext를 초기화 했더나 리프래시 했을 때 발생.
+      - ContextStartedEvent: ApplicationContext를 start()하여 라이프사이클 빈들이 시작 신호를 받은 시점에 발생.
+      - ContextStoppedEvent: ApplicationContext를 stop()하여 라이프사이클 빈들이 정지 신호를 받은 시점에 발생.
+      - ContextClosedEvent: ApplicationContext를 close()하여 싱글톤 빈 소멸되는 시점에 발생.
+      - RequestHandledEvent: HTTP 요청을 처리했을 때
+***좀더 돌아가는거 확인해보자***
+
+- IoC 컨테이너 9부 : ResourceLoader
+  - ResourceLoader : 리소스를 읽어오는 기능을 제공하는 인터페이스
+     
