--- a/java/spring/스프링 프레임워크 핵심기술.md
+++ b/java/spring/스프링 프레임워크 핵심기술.md
@@ -1,4 +1,5 @@
 스프링 프레임워크 핵심기술
+- https://docs.spring.io/spring-framework/docs/current/reference/html/core.html#beans
 - IoC 컨테이너 1부 
   - IoC(Inversion Of Control)란 : 제어의 역전.. 직접 new 쓰지않도록.. 의존성을 낮추는!
     - 스프링 IoC 컨테이너
@@ -147,6 +148,21 @@ public MessageSource messageSource() {
 	return messageSource;
 }
 ```
+---
+- 추가 참고 사항
+  - Intellij 에서는 모듈셋팅에서 resources(ex. application.properties)를 읽을 위치를 클래스패스에 지정할수있도록 해줄수있음(실제적인 build경로는 gradle이 해주는거니깐.. 인텔리j에서 셋팅한정보를 gradle이 읽어서 컴파일시에 셋팅해주는거겠지..?) ***이건 좀더 확인이 필요함..***
+  - Spring에서 제공하는 ResourceLoader를 사용해서 경로를 테스트해보면 경로에 " classpath: " 라는 prefix를 붙였을때는 지정한 클래스패스들의 위치들을 기반으로 찾아주는듯함.. 그래서 그냥 루트의 경로를 찍어봤을때("classpath:/")는 ~/build/classes/main/실제경로시작 인데, "classpath:/applciation.properties"로 경로를 주어도, build/resources/main/application.properties 의 파일을 찾아줌..(아마도 build/resources/main 까지가 클래스패스로 추가되어있는듯함) 
+     - 또한 " file : " 이라는 prefix로는 사용자 컴퓨터에있는 모든 파일들을 찾아올수있는데, 이를 활용하여 외부설정파일들을 읽어올수있음.. "file:./" 는 현재 실행되고 있는 프로젝트의 가장 상위 폴더를 지칭.. 즉, .gradle, .idea, build, src 등의 폴더들이 있음 (gradle로 폴더구조 생성한거를 전제임)
+  - 그래서 springboot에서 @PropertyResource 를 활용하여 읽어올 properties파일들을 지정할수있음! 외부파일도 당연가능!!
+
+  - 참고 사이트
+     - (개념) Spring이 Resource를 가져오는 방법 - https://calgaryhomeless.tistory.com/m/27
+     - Spring - classpath란? Intellij에서 classpath 추가하기 - https://galid1.tistory.com/m/539
+     - 5.7 Application contexts and Resource paths - https://docs.spring.io/spring-framework/docs/3.0.0.M3/reference/html/ch05s07.html
+     - 1-8) 스프링 리소스(Resource): Resource, ResourceLoader - https://nankisu.tistory.com/m/9
+     - 여기 설명 아주 좋음 : https://www.latera.kr/reference/java/2019-09-29-spring-boot-config-externalize/
+---
+
 
 - IoC 컨테이너 8부 : ApplicationEventPublisher
   - ApplicationEventPublisher : 이벤트프로그래밍에 필요한 인터페이스 제공. 옵저버패턴구현
@@ -164,8 +180,135 @@ public MessageSource messageSource() {
       - ContextStoppedEvent: ApplicationContext를 stop()하여 라이프사이클 빈들이 정지 신호를 받은 시점에 발생.
       - ContextClosedEvent: ApplicationContext를 close()하여 싱글톤 빈 소멸되는 시점에 발생.
       - RequestHandledEvent: HTTP 요청을 처리했을 때
-***좀더 돌아가는거 확인해보자***
+      - => 위의 기능들은 ConfigurableApplicationContext 를 통해서 사용가능..
+        - ((ConfigurableApplicationContext)ctx).start();
+        - ((ConfigurableApplicationContext)ctx).stop();
+        - ((ConfigurableApplicationContext)ctx).close();
 
 - IoC 컨테이너 9부 : ResourceLoader
   - ResourceLoader : 리소스를 읽어오는 기능을 제공하는 인터페이스
-     
+
+- Resource 추상화
+  - org.springframework.core.io.Resource
+  - 특징
+    - java.net.URL을 추상화한것
+      - 클래스패스 기준으로 리소스 읽어오는 기능부재로 인해 Resource를 spring에서 만듦
+      - ServletContext를 기준으로 상대경로 읽어오는 기능부재로 인해 Resource를 spring에서 만듦
+    - 스프링 내부에서 많이쓰임..
+  - 구현체
+    - UrlResource
+    - ClassPathResource : "classpath:~~" 이렇게 사용하면 알아서 ClassPathResource로 변경해줌
+    - FileSystemResource
+    - ServletContextResource : 웹 애플리케이션 루트에서 상대경로로 리소스 찾아줌
+    - ..
+  - 리소스 읽어오기
+    - Resource의 타입은 두종류로 결정됨
+      - resource의 파라미터인 location의 문자열
+        - "classpath:aa.txt" : ClassPathResource를 사용. build(프로젝트폴더바로 하위)/resource/main/aa.txt
+        - "file:///aa.txt" : FileSystemResource를 사용. /aa.txt (사용자 컴퓨터의 루트)
+        - "classpath*:aa.txt" : classes 폴더와 jar 폴더를 순환하면서 aa.txt 파일을 모두 찾아냄. ResourcePatternResolver.getResources() 를 사용하여 Resource[]로 받음
+      - ApplicationContext의 타입
+        - web 사용하게되면 default로 ServletContextResource. 즉, 아무런 접두어없이 location에서 파일경로를 가져올때 WebApplicationContext 클래스로 가져온다
+
+- Validation 추상화
+  - org.springframework.validation.Validator
+  - 애플리케이션에서 사용하는 객체 검증용 인터페이스.
+  ***추가적으로 스터디 필요***
+
+- 데이터 바인딩 추상화 : PropertyEditor
+  - org.springframework.validation.DataBinder
+  - 기술적인 관점 : 프로퍼티 값을 타겟 객체에 설정하는 기능
+  - 사용자 관점 : 사용자 입력값을 애플리케이션 도메인 모델에 동적으로 변환해 넣어주는 기능. 입력값들이 대부분 문자열인데, 그 값을 객체가 가지고있는 int, long, boolean, Date 등 심지어 Event나 Book과 같은 도메인 타입으로도 변환해서 넣어주는 기능
+  - PropertyEditor
+    - 스프링3.0 이전까지 DataBinder가 사용
+    - 스레드 세이프하지않음!
+    - 사용하기 불편함.. 사용범위도 제한적이라함(Object와 String간의 변환만 할수있음)
+```java
+public class EventPropertyEditor extends PropertyEditorSupport {
+    @Override
+    public String getAsText() {
+      return ((Event)getValue()).getTitle(); 
+    }
+    @Override
+    public void setAsText(String text) throws IllegalArgumentException {
+      int id = Integer.parseInt(text);
+      Event event = new Event(); 
+      event.setId(id); 
+      setValue(event);
+    }   
+}
+
+=> 이를 아래와 같이 등록(Controller)
+@InitBinder
+public void init(WebDataBinder webDataBinder){
+  webDataBinder.registerCustomEditor(Event.class, new EventEditor());
+}
+
+```
+
+- 데이터 바인딩 추상화 : Converter와 Formatter
+  - Converter
+    - S 타입을 T 타입으로 변환할수있는 매우 일반적인 변환기
+    - 상태정보없음 => 스레드 세이프 => @Component 가능(bean 등록가능)
+    - ConverterRegistry에 등록(이를 직접 사용할일은 거의없을거라함! bean으로 등록할수있어서 그런듯)
+  - Formatter
+    - PropertyEditor 대체제
+    - Object와 String간의 변환을 담당 
+    - 문자열을 Locale에 따라 다국화하는 기능을 제공(web사용하는 사람들을위한 추가 편의기능)
+    - 이 또한 bean으로 등록가능
+  - ConversionService
+    - Converter와 Formatter는 ConversionService를 사용! DataBinder 말고
+    - 실제 변환 작업은 이 인터페이스를 통해서 스레드 세이프하게 사용가능 
+    - 스프링 MVC, 빈(value) 설정, SpEL에서 사용
+    - DefaultFormattingConversionService
+      - FormatterRegistry 구현 (FormatterRegistry는 ConverterRegistry를 상속)
+      - ConversionService 구현 
+      - 여러 기본 컨버터와 포맷터에 등록해줌
+    - 스프링부트
+      - class org.springframework.boot.autoconfigure.web.format.WebConversionService
+      - DefaultFormattingConversionService 이를 상속
+      - bean으로 등록해놓으면 formatter나 converter가 자동으로 등록됨(설정클래스에서 따로 등록할필요없음 resgistry..)
+  - 등록한 Converter확인하려면 그냥 ConversionService를 toString()으로 찍어보면됨..
+
+- SpEL (스프링 Expression Language)
+  - 객체 그래프를 조회하고 조작하는 기능을 제공
+  - 문법
+    - #{"표현식. 연산가능"}
+    - ${"프로퍼티"}
+    - 표현식 안에 프로퍼티 사용가능,, (반대는 불가)
+      - #{${my.data}+1 eq 100}
+    - 레퍼런스 좀더 살펴볼것
+       - https://docs.spring.io/spring-framework/docs/current/reference/html/core.html#expressions-evaluation
+  - 사용하는곳
+    - @Value
+    - @ConditionalOnExpression
+    - 스프링시큐리티
+    - 스프링데이터
+    - Thymeleaf
+      - [Thymeleaf](https://blog.outsider.ne.kr/997)
+  - 아래와 같이도 사용가능
+```java
+SpelExpressionParser spelExpressionParser = new SpelExpressionParser();
+Expression expression=spelExpressionParser.parseExpression("100+2");
+Integer result=expression.getValue(Integer.class);
+System.out.println(result);
+
+
+// Create and set a calendar
+GregorianCalendar c = new GregorianCalendar();
+c.set(1856, 7, 9);
+
+// The constructor arguments are name, birthday, and nationality.
+Inventor tesla = new Inventor("Nikola Tesla", c.getTime(), "Serbian");
+
+ExpressionParser parser = new SpelExpressionParser();
+
+Expression exp = parser.parseExpression("name"); // Parse name as an expression
+String name = (String) exp.getValue(tesla);
+// name == "Nikola Tesla"
+
+exp = parser.parseExpression("name == 'Nikola Tesla'");
+boolean result = exp.getValue(tesla, Boolean.class);
+// result == true
+```
+ 
