--- a/java/spring/스프링 프레임워크 핵심기술.md
+++ b/java/spring/스프링 프레임워크 핵심기술.md
@@ -311,4 +311,65 @@ exp = parser.parseExpression("name == 'Nikola Tesla'");
 boolean result = exp.getValue(tesla, Boolean.class);
 // result == true
 ```
- 
+
+- AOP 주요개념
+	- Aspect : Advice(반복적으로 수행해야할 작업) + PointCut(어디에 적용할지)
+	- Target : Aspect가 적용되는 대상
+	- join point : JoinPoint가 적용이 되는 대상. 어떤 액션에 합류될지.. ex) method 실행시 끼여들어라!, 생성자 접근 전/후
+- AOP 구현체
+  - 자바
+    - AspectJ : 매우다양
+	- 스프링 AOP : 국한되어있음
+
+- AOP 적용방법
+  - 컴파일 : 클래스파일에 이미 필요한 Aspect가 적용되어져 있음 (AspectJ)
+  - 로드타임 : 클래스파일에는 변경이 없는데, 클래스를 로딩할때 Aspect가 적용(로드시 위빙(끼어든다)한다고 이야기함) (AspectJ)
+  - 런타임 : Bean을 만들때 Proxy bean을 만들어서 원래 Bean의 메소드를 호출전에 Aspect를 호출하도록 (스프링 AOP)
+
+---
+AOP(Aspect Oriented Programming) => 관점지향프로그래밍
+
+프로그램    => Aspect (핵심관심사항, 공통관심사항-로그,보안,세션처리,transaction)
+-핵심코드
+-공통코드
+
+OOP(객체지향프로그램)에서는 공통코드를 따로 분리 해서 필요할때 호출한다. spring AOP를 이용하여, 호출하는것의 단점(예를들어 호출하는 이름이 변경되면 일일이 다 찾아서 바꿔줘야함)을 보완함.
+
+공통코드를 적용할 대상 -> method //joinpoint라고함
+각각의 클래스마다 핵심로직과 공통코드를 적용할곳 즉, joinpoint가 있음,,
+여러개의 joinpoint가 모여서 부분합(공통코드가 필요한곳)을 지정한것을 pointcut이라고함
+pointcut => 정규식 표현식이 있음,,
+
+Advice - 공통코드
+언제 advice를 적용할것인지?
+ex.핵심로직이 실행되기전에? 후에? 실행이 성공했을떄?...
+①around ->사전,사후 모두 다
+②before ->사전
+③after ->사후 (오류가 나던 안나던 무조건!)
+④after Returning ->정상적으로 동작했을때만(오류 안났을때)
+⑤after throwing ->오류가 났을때 해야할일
+
+AOP Proxy Server (joinpoint에서 advice를 호출해줌 => 핵심코드와 공통코드를 연결!)
+-weaving(joinpoint -> AOP proxy Server)
+①컴파일할때
+②클래스 로딩할때
+③runtime(실행) 할때 (AOP는 3번만 지원)
+
+expose-proxy="false" proxy-target-class="false"
+-Proxy Server 생성방법
+①J2SE방식 => 반드시 interface구현 (기본값),, // 인터페이스로 구현되어있는 메소드만 적용
+②CGLIB방식 => interface 구현 여부 상관없이 적용
+
+-여러개의 Pointcut + Advice가 모여서 하나의 Advisor가됨
+-pointcut,weaving,advice,advisor 전체를 통틀어 aspect(관점)이라 함.
+-advisor를 적용받을 대상을 target이라함
+
+
+AOP코딩방법
+①interface구현하는방법(요즘은 거의 안씀)
+②Pojo방식의 Aspect이용 =>xml기반
+③Pojo방식의 Annotation이용
+
+
+
+---
