공부한내용추가

--- a/java/JUnit/테스트주도개발.md
+++ b/java/JUnit/테스트주도개발.md
@@ -19,7 +19,7 @@
     - 아래의 사항들을 해결해준다! (p212 참고)
       - 테스트 하고자 하는 기능이 어디에 속하는지.. 기존메소드? 새로운메소드? 새로운 클래스??
       - 메소드 이름 어떻게 만들지?
-      - 올바른 결과를 어떤시긍로 검사할지?
+      - 올바른 결과를 어떤식으로 검사할지?
       - 이 테스트가 제안하는 또 다른 테스트는?
   - 명백한 데이터를 사용할것!
     - 만약 수식이 필요한 내용이라면 단언부에서 값이 도출되는 수식을 적어주면좋음! 이 수식을 통해서 내가 무얼 만들어야하는지를 알수있으니까!
