--- a/java/spring/스프링 프레임워크 핵심기술.md
+++ b/java/spring/스프링 프레임워크 핵심기술.md
@@ -14,7 +14,8 @@
         - 싱글톤 : 하나만
         - 프로토타입 : 매번 다른 객체
       - 라이프사이클 인터페이스 지원
-        - ex) @PostConstruct : bean이 만들어지자마자 호출되는곳 
+        - ex) @PostConstruct : bean이 만들어지자마자 호출되는곳, @Order ...
+ 
 
     - ApplicationContext
       - BeanFactory 에 비해 추가로 더 많은 기능을 가짐..
@@ -31,10 +32,10 @@
   - 처음 스프링에서는 모든 bean을 xml에 따로 등록이 필요했다(id, scope, property로 넣을지.. 등등)
   - 이게 너무 복잡하니.. xml에서 context:component-scan 이 나옴! 지정한 패키지에서부터 스캔하여 bean으로 만들어라!
   - 좀더 나아가서.. 자바 소스에서 빈을 설정하도록하자해서 나온게 @Configuration 을 사용하여 해당 클래스에 @Bean으로 만드는것!
-
+  - 스프링부트에서는 @SpringBootApplication 안에 @ComponentScan이 있는데, 이를 통해서 실행하는 Application 소스의 패키지내부 모든 곳을 스캔함
 
 - IoC 컨테이너 3부 : @Autowire
-  - @Autowire 는 빈을 찾아 주입해줌..
+  - @Autowired 는 빈을 찾아 주입해줌..
     - 적용 경우의수
       - 해당타입의 빈이 없는경우 : x
       - 해당타입의 빈이 한개인 경우 : o
@@ -43,15 +44,14 @@
         - 같은 이름 못찾으면 : x
     - 같은 타입의 bean이 여러개 일때
       - @Priamry : 해당 어노테이션있는것으로 우선적용
-      - 해당 타입의 빈 모두 주입 : 동일한 타입을 여러개 가지고잇는경우(인터페이스 구현을 여러개..) 그냥 @autowire를 사용하여 list로 받으면 해당 타입을 구현한 모든 bean을 받을수있다..
+      - 해당 타입의 빈 모두 주입 : 동일한 타입을 여러개 가지고잇는경우(인터페이스 구현을 여러개..) 그냥 @Autowired를 사용하여 list로 받으면 해당 타입을 구현한 모든 bean을 받을수있다..
       - @Qulifier : 이름 지정가능
     - "required=false" 라는 옵션을 사용하면 해당 bean이 반드시 주입되지않아도 기동하는데 문제없도록해줌..(기본값은 "required=true")
     - AutowiredAnnotationBeanPostProcessor​ extends BeanPostProcessor
       - 스프링이 제공하는 @Autowired와 @Value 애노테이션 그리고 JSR-330의 @Inject 애노테이션을 지원하는 애노테이션 처리기.
     - ***클래스의 bean이 생성될때, 해당 클래스 내부에 적용되어있는 빈 생성시 전처리 로직을 타는애들(ex. @autowired, @PostConstruct 등) 중 @Autowired와 같이 빈 주입이 필요하다면, 해당 bean이 생성되어있지않을때 먼저 생성해준다..***
   - @PostConsturct와 같은 어노테이션을 통해서 bean이 생성될때 특정 작업을 가능하게 할수있는데, 아래 라이프사이클에서 postProcessBeforeInitialization 의 구간에서의 작업이다.
-  bean을 만들고 또 initialization 하는게 있다하는데, 그 구간임 (@Autowired도 동일한구간에서 이루어짐, 그러나 @PostConstruct가 @Autowire보다 이후에 실행)
-  (어떻게 bean이 생성되어 돌아가는지 좀더 살펴보면좋을듯)
+  - bean을 만들고 또 initialization 하는게 있다하는데, 그 구간임 (@Autowired도 동일한구간에서 이루어짐, 그러나 @PostConstruct가 @Autowire보다 이후에 실행) (어떻게 bean이 생성되어 돌아가는지 좀더 살펴보면좋을듯)
   - Bean factory implementations should support the standard bean lifecycle interfaces as far as possible. The full set of initialization methods and their standard order is:
       1. BeanNameAware's setBeanName
       2. BeanClassLoaderAware's setBeanClassLoader
@@ -128,7 +128,7 @@ public static void main(String[] args) {
 	- 다양한 방법으로 정의할수있는 설정값
 	- Environment를 통해서 소스설정 및 프로퍼티 값 가져올수 있다!
     - 프로퍼티에는 우선순위가 있으며, 계층형으로 
-	- 스프링에서 @PropertySource를 통해서 Environment의 프로퍼티를 추가할수있음!
+	- 스프링에서 @PropertySource를 통해서 E프nvironment의 로퍼티를 추가할수있음!
 	- Environment를 기반으로 SpringBoot에서는 @Value로 해당 프로퍼티값을 가져올수있음!
 	
 - IoC 컨테이너 7부 : MessageSource
@@ -203,7 +203,7 @@ public MessageSource messageSource() {
     - ..
   - 리소스 읽어오기
     - Resource의 타입은 두종류로 결정됨
-      - resource의 파라미터인 location의 문자열
+      - resource의 파라미터인 location의 문자열(추천)
         - "classpath:aa.txt" : ClassPathResource를 사용. build(프로젝트폴더바로 하위)/resource/main/aa.txt
         - "file:///aa.txt" : FileSystemResource를 사용. /aa.txt (사용자 컴퓨터의 루트)
         - "classpath*:aa.txt" : classes 폴더와 jar 폴더를 순환하면서 aa.txt 파일을 모두 찾아냄. ResourcePatternResolver.getResources() 를 사용하여 Resource[]로 받음
@@ -312,19 +312,133 @@ boolean result = exp.getValue(tesla, Boolean.class);
 // result == true
 ```
 
+- AOP? (설명 굿 : https://shlee0882.tistory.com/206)
+  - AOP는 부가기능을 애스펙트(Aspect)로 정의하여, 핵심기능에서 부가기능을 분리함으로써 핵심기능을 설계하고 구현할 때 객체지향적인 가치를 지킬수 있도록 도와주는 개념이다.
+
 - AOP 주요개념
+  - Core Concerns : 업무 로직을 포함하는 기능을 핵심 기능
+  - Cross-cutting Concerns : 핵심 기능을 도와주는 부가적인 기능(로깅, 보안)을 부가기능
 	- Aspect : Advice(반복적으로 수행해야할 작업) + PointCut(어디에 적용할지)
 	- Target : Aspect가 적용되는 대상
-	- join point : JoinPoint가 적용이 되는 대상. 어떤 액션에 합류될지.. ex) method 실행시 끼여들어라!, 생성자 접근 전/후
+	- join point : Advice가 적용될수있는 위치. 어떤 액션에 합류될지.. ex) method 실행시 끼여들어라!, 생성자 접근 전/후
+  	- 타겟 객체가 구현한 인터페이스의 모든 메서드는 조인 포인트가 된다.
+  - Advisor : Spring AOP에서만 사용되는 용어 (Aspect랑 같은 말같음..)
+  - weaving : 위빙은 포인트컷에 의해서 결정된 타겟의 조인 포인트에 부가기능(어드바이스)를 삽입하는 과정을 뜻한다.
+
 - AOP 구현체
   - 자바
     - AspectJ : 매우다양
-	- 스프링 AOP : 국한되어있음
+  	- 스프링 AOP : 국한되어있음
+    	- Spring은 프록시 기반 AOP를 지원한다.
+      	- Spring은 타겟(target) 객체에 대한 프록시를 만들어 제공한다.(bean에만 적용가능)
+      	- Runtime에 생성
+      	- 프록시는 어드바이스를 타겟 객체에 적용하면서 생성되는 객체이다.
+      	- > 프록시 패턴 : 접근제어 또는 부가기능추가 가능하도록 해주는 패턴
+      	 
+    	- Spring AOP는 메서드 조인 포인트만 지원한다.
+      	- Spring은 동적 프록시를 기반으로 AOP를 구현하므로 메서드 조인 포인트만 지원한다.
+        - 핵심기능(타겟)의 메서드가 호출되는 런타임 시점에만 부가기능(어드바이스)을 적용할 수 있다.
+        - 반면에 AspectJ 같은 고급 AOP 프레임워크를 사용하면 객체의 생성, 필드값의 조회와 조작, static 메서드 호출 및 초기화 등의 다양한 작업에 부가기능을 적용 할 수 있다.
 
+      - Spring에선 런타임 위빙을 할 수 있도록 상황에 따라 JDK Dynamic Proxy와 CGLIB 방식을 통해 Proxy Bean을 생성
+        - JDK Dynamic Proxy(Spring의 proxy 생성 default)
+          - 타겟이 인터페이스 구현 o
+          - Reflection 패키지를 사용한 Proxy 생성
+          - > Object proxy = Proxy.newProxyInstance(ClassLoader       // 클래스로더 <br>
+                           &emsp;&emsp;&emsp;         , Class<?>[]        // 타깃의 인터페이스 <br>
+                           &emsp;&emsp;&emsp;         , InvocationHandler // 타깃의 정보가 포함된 Handler <br>
+              						 &emsp;&emsp;			  );
+        - CGLIB(Springboot의 proxy 생성 default)
+          - 타겟이 인터페이스 구현 x,, 클래스를 가지고 Proxy 생성
+          - CGLib은 Code Generator Library의 약자로, 클래스의 바이트코드를 조작하여 Proxy 객체를 생성해주는 라이브러리
+          - CGLib은 타깃 클래스에 포함된 모든 메소드를 재정의하여 Proxy를 생성해줍니다. 이 때문에 CGLib은 Final 메소드 또는 클래스에 대해 재정의를 할 수 없으므로 Proxy를 생성할 수 없다는 단점이 있지만, CGlib은 바이트 코드로 조작하여 Proxy를 생성해주기 때문에 성능에 대한 부분이 JDK Dynamic Proxy보다 좋습니다.
+
+        - 참고사이트(위 둘의 내용 정리 굿) : https://gmoon92.github.io/spring/aop/2019/04/20/jdk-dynamic-proxy-and-cglib.html#:~:text=CGLib%EC%9D%80%20Code%20Generator%20Library,Proxy%EB%A5%BC%20%EC%83%9D%EC%84%B1%ED%95%B4%EC%A3%BC%EA%B3%A0%20%EC%9E%88%EB%8A%94%EB%8D%B0%EC%9A%94.
 - AOP 적용방법
   - 컴파일 : 클래스파일에 이미 필요한 Aspect가 적용되어져 있음 (AspectJ)
   - 로드타임 : 클래스파일에는 변경이 없는데, 클래스를 로딩할때 Aspect가 적용(로드시 위빙(끼어든다)한다고 이야기함) (AspectJ)
   - 런타임 : Bean을 만들때 Proxy bean을 만들어서 원래 Bean의 메소드를 호출전에 Aspect를 호출하도록 (스프링 AOP)
+
+- 스프링 AOP
+  - Aspect 정의
+    - @Aspect
+    - 빈으로 등록해야하므로 @Component
+  - PointCut 정의
+    - @Pointcut(표현식)
+    - PointCut 표현식
+      - PointCut끼리는 조합도 가능( &&, |, ! )
+      - execution 명시자
+        - execution([수식어] 리턴타입 [클래스이름].이름(파라미터)
+          - 수식어 : public, private 등 수식어를 명시합니다. (생략 가능)
+          - 리턴타입 : 리턴 타입을 명시합니다.
+          - 클래스이름 및 이름 : 클래스이름과 메서드 이름을 명시합니다. (클래스 이름은 풀 패키지명으로 명시해야합니다. 생략도 가능)
+          - 파라미터 : 메서드의 파라미터를 명시합니다.
+          - " * " : 모든 값을 표현합니다.
+          - " .. " : 0개 이상을 의미합니다.
+        - Ex)
+          - execution(public Integer com.edu.aop.\*.\*(\*))
+            - com.edu.aop 패키지에 속해있고, 파라미터가 1개인 모든 메서드
+
+          - execution(\* com.edu..\*.get\*(..))
+            - com.edu 패키지 및 하위 패키지에 속해있고, 이름이 get으로 시작하는 파라미터가 0개 이상인 모든 메서드 
+
+          - execution(\* com.edu.aop..\*Service.\*(..))
+            - com.edu.aop 패키지 및 하위 패키지에 속해있고, 이름이 Service르 끝나는 인터페이스의 파라미터가 0개 이상인 모든 메서드
+
+          - execution(\* com.edu.aop.BoardService.\*(..))
+            - com.edu.aop.BoardService 인터페이스에 속한 파마리터가 0개 이상인 모든 메서드
+
+          - execution(\* some\*(\*, \*))
+            - 메서드 이름이 some으로 시작하고 파라미터가 2개인 모든 메서드
+
+      - within 명시자
+        - Ex)
+          - within(com.edu.aop.SomeService)
+            - com.edu.aop.SomeService 인터페이스의 모든 메서드
+          - within(com.edu.aop.\*)
+            - com.edu.aop 패키지의 모든 메서드
+          - within(com.edu.aop..\*)
+            - com.edu.aop 패키지 및 하위 패키지의 모든 메서드
+
+      - bean 명시자
+        - Ex)
+          - bean(someBean)
+            - 이름이 someBean인 빈의 모든 메서드
+          - bean(some\*)
+            - 빈의 이름이 some으로 시작하는 빈의 모든 메서드
+      - @annotation
+        - annotation등록하여 사용
+  - 어드바이스 정의
+    - @Before(pointCut)
+    - @AfterReturning(pointCut)
+    - @AfterThrowing(pointCut)
+    - @Around(pointCut)
+
+
+
+```java
+@Component
+@Aspect
+public class PerfAspect {
+
+    //@Around("execution(* me.test.springcoretest.aop..*(..)))")
+    //@Around("@annotation(PerfLogging)") //애노테이션 기반으로 AOP적용
+    //@Around("bean(aopTest)") //등록된 bean에도 적용가능
+    @Around("pointCut()") //@pointcut 사용
+    public Object logPref(ProceedingJoinPoint proceedingJoinPoint) throws Throwable {
+        long begin=System.currentTimeMillis(); //메소드 호출 이전
+        Object retVal=proceedingJoinPoint.proceed();
+        System.out.println(System.currentTimeMillis()-begin); //메소드 호출 이후
+        return retVal;
+    }
+
+    //@Pointcut("within(me.test.springcoretest.aop..*)")
+    @Pointcut("@annotation(PerfLogging)")
+    public void pointCut(){}
+}
+```
+
+
 
 ---
 AOP(Aspect Oriented Programming) => 관점지향프로그래밍
@@ -371,5 +485,9 @@ AOP코딩방법
 ③Pojo방식의 Annotation이용
 
 
-
 ---
+
+- Null-safety
+  - 스프링 프레임워크 5에 추가된 Null관련 annotation
+  - 목적
+    - (툴의 지원을 받아) 컴파일 시점에 최대한 NullPointerException을 방지하는것!
