--- a/java/JUnit/테스트주도개발.md
+++ b/java/JUnit/테스트주도개발.md
@@ -43,6 +43,9 @@
     - 모의 객체는 모든 객체의 가시성에 대해 고민하도록 격려해서, 설계에서 커플링이 감소하도록한다.(모의객체를 통해서 모의객체뿐아니라 모의객체를 호출하는 객체에서 어떤 함수를쓰고 어떤 파라미터를 전달할지를 고려하니까 그런듯?)
     - 모의 객체를 사용하면 프로젝트에 위험요소가 하나 추가되지만, 모의객체용 테스트 집합이 진짜객체에서 사용가능할때 이러한 위험요소를 줄일수있다
   - 팀 프로젝트하고있으면 언제나 깔끔하게 체크인하고 만약 합쳐졋을때 빨간막대를 발견하면 다시 만들어야한다.. 결코 주석으로 잠시나마 빨간막대를 회피하려들지말것!
+  - self-shunt 패턴
+    - 이 패턴은 결국 모킹(mocking)을 사용하는데, 그 대상을 Mock 객체가 아닌 TestCase 자체로 만들어 가독성을 높일 수 있습니다.
+    - 테스트할 대상에 자기자신을 넣어줌(왜냐하면 자기자신이 테스트할대상의 인터페이스를 구현하도록 설계하였기때문에 가능!)
 --- 
 - 초록 막대 패턴
   - 실패하는 테스트를 만든 후 첫번째 구현은 상수를 사용하는것이다! 그리고 이 상수를 변수로 바꿔나가라!
@@ -74,5 +77,19 @@
     - 역할이 엄밀하게는 다르기때문에 프로그래머의 트릭이지 세상 사람들에게 일반적으로 받아들여지는 개념은 아니라고함
     - 트리모양의 모습이 나타날때, 모든 노드를 합쳐야할때에 상당히 유용하게 쓰임
 ---
+- 부록 : 실전 TDD
+  - 네트워크 프로그래밍할때의 TDD
+    - 네트워크 프레임워크를 먼저 작성하지말고 핵심 로직부터 작성할것!
+      - 네트워크 프레임워크부터 작성하면 의존성생길수있고, 테스트리듬이 너무 길어질수있음!
+
+
+
+
+
+---
 - 용어정리
   - 삼각측량 : 예제 두개를 가지고 일반화(추상화)하는것..?
+
+- 추가 참고사이트
+  - https://repo.yona.io/doortts/blog/issue/1 ("TDD 실천법과 도구" 책 전체를 PDF )
+  - https://dongdd.tistory.com/165 ([TDD] Test code 접근 방식, Mock, Mockito, BDD)
