--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -26,6 +26,13 @@
   - 클래스를 바꾸는 이유는 한 가지 뿐이어야한다 (직역해서 그런건지.. 내용이랑은 매칭이잘..)
     - 최대한 한 클래스에서는 한가지 역할만수행하도록! (응집도 높다!! 응집도가 높다는것은 역할이 여러개 모여있다는것이 아니라, 필수적이고 필요한 연관된것만 모여있다는것이다!!)
     - 한 클래스에 여러 역할들을 담당하고있으면 고쳐야하는 부분이 상호간에 연관될수있음..
+  - ***토비 스프링에서 이야기하는 디자인패턴에 대한 설명***
+    - 소프트웨어 설계시 특정 상황에서 자주 만나는 문제를 해결하기 위해 사용할수있는 재사용 가능한 솔루션
+    - 이러한 디자인 패턴에는 설계의 의도와 해결책을 설명할수있다
+    - 주로 객체지향설계에 관한것!
+    - 디자인패턴은 객체지향을 추구하다보니, 이 원칙을 근간으로 만들어져잇는데, 그로인해 크게 보면 두가지의 모습이 나타남
+      - 클래스상속
+      - 오브젝트 합성
      
 - 스트레이티지 패턴 (DUCK)
   - 알고리즘군을 정의하고 이를 캡슐화하여 원하는 알고리즘(알고리즘군을 구성하는)을 교체할수있도록(동적으로도가능) 만들어주는 패턴
