--- a/스터디/토비의스프링/토비의 스프링.md
+++ b/스터디/토비의스프링/토비의 스프링.md
@@ -160,3 +160,139 @@
         - 버그의 내용을 명확하게 분석
           - 동등분할 : 같은 결과를 내는 값의 범위를 구분해서 각 대표값으로 테스트를 하는 방법. 작업의 결과의 종류가 true, false 또는 예외발생이라면 각 결과를 내는 입력값이나 상황의 조합을 만ㄷ르어 모둔 경우에 대한 테스트를 해보는게 좋다!
           - 경계값 분석 : 경계의 근처에 있는 값을 이용해 테스트하는것. 숫자의 입력값인 경우 0이나 그 주변값 도는 정수의 최댓값, 최솟값 등으로 테스트하는것!
+
+
+- 3장 템플릿
+  - 템플릿이란 바뀌는 성질이 다른 코드 중에서 변경이 거의 일어나지 않으며, 일정한 패턴으로 유지되는 특성을 가진 부분을, 자유롭게 변경되느 ㄴ성질을 가진 부분으로부터 독립시켜서 효과적으로 활용할수 있도록 하는방법! (즉, 변하는곳과 변하지않는곳을 분리/독립시키는 패턴)
+  - 템플릿 메소드 패턴 : 변하는 부분은 하위클래스에서, 변하지않는부분은 상위클래스에서 정의. 즉, 하위클래스에서 오버라이딩한 메소드(변경이 일어나는..)를 상위클래스에서 호출함 => 이는 변할때마다 클래스가 새로 생성되어야함
+  - 이에대한 개선으로 전략패턴의 최적화를 생각할수있음. 변하는 부분을 전략패턴으로 사용. 변화되는부분을 메소드의 파리미터로 전달받음(전략객체)으로써 지속적으로 클래스 생성하는것을 막을수있으며, 소스도 더 직관적으로 볼 수 있음. - 템플릿/콜백 패턴 (전략객체를 위한 인터페이스는 보통은 하나의 메소드를 사용하며 이러한 전략객체를 메소드로 전달할때 익명클래스로 생성하여 전달해줌 - 마이크로 DI)
+    - 마이크로DI : 일반적으로 DI는 의존관계에 있는 두개의 오브젝트와 이 관계를 다이내믹하게 설정해주는 오브젝트 팩토리(DI 컨테이너), 이를 사용하는 클라이언트라는 4개의 객체에서 일어난다. 이러한 DI가 하나의 메소드안에서 객체를 생성하고 전달하여 의존관계를 셋팅하여 매우 작은 단위의 코드와 메소드 사이에서 일어나기도 하는데, 이를 마이크로 DI라고 한다.
+
+  - 템플릿/콜백 패턴 : 전략패턴의 컨텍스트를 템플릿이라 부르고, 익명 내부클래스로 만들어지는 오브젝트를 콜백이라고 부른다.
+    - 템플릿 : 어떤 목적을 위해 미리 만들어둔 모양이 있는 틀. 고정된 틀 안에서 바꾸ㅡㄹ수 있는 부분을 넣어서 사용하는 경우에 템플릿이라함
+    - 콜백 : 실행되는 것을 목적으로, 다른 오브젝트의 메소드에 전달되는 오브젝트(callbackObj). 즉, 템플릿안에서 실행될 목적으로 전달되는 객체임! 보통은 단일 메소드를 사용하고 특정 기능을 위한 한번 호출하는게 일반적
+      - obj.method(callbackObj)
+    - 특징 
+      - 메소드 단위로 사용할 오브젝트를 매번 새롭게 전달
+      - 클라이언트 메소드 내의 정보를 직접 참조! (클라이언트가 템플릿 메소드 호출시 오브젝트를 익명내부 클래스로 만들기때문에 그때의 클라이언트에 담긴 정보를 참조가능! 강력하게 결합되어있음!)
+      - 컨텍스트 호출과 동시에 전략DI(익명내부클래스)를 수행하는것!
+      - 템플릿은 한번에 하나 이상의 콜배긍ㄹ 사용할수도있고, 하나의 콜백을 여러번 호출할수도 있다!
+
+  - 3장을 통한 기타 팁
+    - 중복된 코드는 먼저 메소드로 분리 => 그 중 일부 작업을 필요에 따라 바꾸어 사용해야 한다면 인터페이스를 사이에 두고 분리해서 전략패턴을 적용 & DI로 의존관계 관리 => 바뀌는 부분이 한 애플리케이션 안에서 동시에 여러 종류가 만들어 질수 있다면 템플릿/콜백패턴을 적용
+    - 테스트 작성시 네거티브를 먼저 생각해보자!
+
+- 4장 예외
+  - 예외는 두가지 처리를 염두해야함
+    - 복구
+    - 중단
+  - 예외의 종류와 특징
+    - java.lang.Error
+      - 시스템에 비정상적인 상황발생하였을때. 에플리케이션 코드에서 못잡음
+      - 애플리케이션에서는 해당 레벨에 대한 에러는 신경쓸필요없음
+    - java.lang.Exception
+      - 언체크예외
+        - RuntimeException or RuntimeException 서브클래스
+        - 예외처리 할수는 있으나 반드시처리해주어야하는것은 아님(컴파일 에러 안남)
+        - 복구할 가능성이 없는것은 언체크 예외로처리하고 일괄적으로 handling 하는게 좋음(메일이 간다든가..)
+      - 체크 예외
+        - Excpetion or Exception클래스의 서브클래스 (Not RuntimeException)
+        - 예외처리 반드시 해주어야함(컴파일 에러남)
+        - 복구할 가능성이 있는 경우에 사용. 적절한 처리로직 필요
+        - 어플리케이션 예외는 체크예외를 해주는게 좋음
+          - 비지니스 로직상에서 복구가 필요한 에러들..(엄밀히 말하면 이 또한 기술적으로는 시스템에러가 아니니깐 정상로직이나, 일반적인 flow에서 예외상황이라고 생각하면 좋을듯) ex) 인출시 잔고없을때 진행하는 로직
+  - 예외처리 방법
+    - 복구
+      - 보통은 체크예외에서 사용
+    - 회피
+      - 바로던지기
+      - 한번 catch에서 잡고 던지기(catch문에서 무언가 실행할게 있을 것)
+    - 전환
+      - catch에서 잡고 예외전환한뒤 던짐
+      - 좀더 세부적이고 구체적인 에러를 전달하고자할때도 사용 (+ 추상화된 예외)
+        - 예를들어, 단순이 Dao에서 SQLException이 아닌, DuplicateUserIdException과 같이 특정 상황에 좀더 세부적으로 전달.
+        - Dao에서 적절한 예외로 전달해서 던져주면, 이에 대한 복구잡업은 service에서! 
+      - 예외를 전활할때는 기존발생한 예외를 담아서 던지는 중첩예외로 만드는것이 좋음
+      - 또한 체크예외를 언체크 예외로 변경하여 던져주기도함(반대일 경우도 있겠지)
+        - try catch로 계속 잡아주거나 던져줄 필요없이!
+  - DataAccessException
+    - 스프링에서 제공하는 SQLException(JDBC)을 대체할수잇는 런타임예외(각 DBMS별로 너무 다름..ㅡㅡ)
+    - 각 DBMS의 드라이버나 메타정보를 참고해서 DataAccessException의 하위클래스를(좀 더 에러의 의미를 명확하게 하기위해) 만들어주기때문에, 각 DBMS에 의존적이고 통일이 어려운 JDBC를의 한계를 보완
+    - 한걸음 더 나아가, 자바의 다양한 데이터 엑세스 기술을 사용할때 발생하는 예외들을 추상화해서 DataAccessException 계층구조 안에 정리해놓았음
+      - JDBC,JDO,JPA, 하이버네이트 등 데이터 엑세스 기술들에 대한 각각의 에러들에대해서 추상화시켜놓았으니 데이터 엑세스 기술들이 변해도 소스변화를 최소화 시킬수있겠지
+      - ***어느정도 추상화된 공통 예외로 변환해주긴 하지만, 근본적인 한계가 있기때문에 사용에 매우 주의를 기울여야함! 미리 학습테스트를 만들어서 실제로 전환되는 예외를 꼭 확인할것!***
+    - 이를 사용하면 Dao 인터페이스를 만들때 특정 데이터엑세스기술에 종속되어있는 메소드(예외 던질때 특정 엑세스기술의 Exception)가 아닌 통일 시켜줄수있음!
+
+  - 4장을 통한 기타 팁
+    - 예외안에 의미있는 정보들을 넣어주면 좋을듯!
+      - 예를들어, 잔고 관련하여 에러가 났다면, 현재 남은 금액이 얼마인지도 에러클래스 내부적으로 담고있다가 전달해주면 좋을듯
+
+- 5장 서비스 추상화
+  - 데이터 엑세스 기술이 변경된다고해서 비지니스로직이 있는 계층(service)이 변경되어서는 안된다!
+    - 그래서 dao는 인터페이스로! dao인터페이스도 exception 같은 경우, 데이터 엑세스 기술에 영향받지않도록 RuntimeException을 사용하고, 스프링에서 이미 추상화되어있는 데이터 엑세스 오브젝트를 활용하자!
+    - 비지니스로직 또한 내부적으로 책임과 역할에 따라서 깔끔하게 메소드로 정리되어야한다!
+  - 이를 해결하기위해 서비스 계층을 스프링은 제공해준다
+  - 각 오브젝트와 메소드가 자기 몫의 책임을 맡아 일을 하는 구조여야함!
+    - ***객체 지향적인 코드는 다른 오브젝트의 데이터를 가져와서 작업하는 대신, 데이터를 갖고 있는 다른 오브젝트에게 작업을 해달라고 요청한다.(당연히 책임이 있는 오브젝트에게 요청!) 오브젝트에게 데이터를 요구하지말고 작업을 요청하라는 것이 객체지향 프로그래밍의 가장 기본이 되는 원리이다.***
+  - 트랜잭션 서비스 추상화
+    - 트랜잭션 : 쪼갤수 없는 논리 단위. 그래서 문제일어나면 아예 안되어야한다!(All or Nothing!)
+    - 트랜잭션을 적용하려면 jdbc기준 동일한 connection을 사용해야하므로 보통 service 계층에서 적용을 하게된다. 그러나, 그렇게 된다면 다른 데이터 엑세스 기술을 사용하게되면, 데이터 엑세스 기술별로 service를 만들어야한다. 이를 막기위해서 스프링은 PlatfromTransactionManager라는 추상화된 서비스를 제공해준다.
+      - 즉, DI만 특정 데이터 엑세스 기술에 맞춰서 해준다면, 서비스 계층의 코드는 전혀 고칠 필요가 없다!
+  - 단일책임의 원칙
+    - 스프링은 DAO와 SERVICE와 같은 수평적인 관계(로직의종류)에서도, DAO와 Datasource 같은 수직적인관계(로직과 기술)에서도 모두 결합도가 낮게 설계할수있도록 도와준다. 이는 DI로 인하여 가능하다!
+    - DI는 관심, 책임, 성격이 다른 코드를 깔끔하게 분리해준다.
+    - 단일 책임원칙은 하나의 모듈에는 한가지 책임이 있어야한다는것이다. 즉, 모듈이 변경되어야할 이유도 하나여야 된다는것이다!
+    - 이런 단일책임원칙을 잘 지켜졌을때, 수정해야할 부분이 명확해지며, 수정해야할곳도 최소한으로 줄게된다
+  - 테스트와 서비스 추상화
+    - 로우레벨의 다양한 기술(하는 역할은 동일)에 대해 인터페이스를 활용하여 일관성 있는 접근 방법을 제공할수잇다. 이를 통해서 확장 불가능한 API도 서비스 추상화를 통해서 손쉽게 테스트가 가능하다
+    - 특히나 외부리소스 연동에는 서비스 추상화를 통해서 더욱 손쉽게 원하는 오브젝트에만 집중하여 테스트가 가능하다
+      - 예를들어, 서비스계층에서 특정기능 수행시 확인 메일발송 기능이 있을때, 메일발송은 주된로직이 아니므로 이를 추상화해놓는다면(mock객체 생성) 빠르게 서비스의 주 기능을 테스트 해볼수있다
+    - 테스트 대상으로부터 전달받은 정보를 검증할수있도록 설계된것을 목 오브젝트라한다
+      - 스텁 + 테스트 결과 및 테스트 대상 오브젝트와 이와 연계된 의존오브젝트간에 일어나는일을 검증
+      - *스텁 : 테스트 코드가 정상적으로 수행하는것을 도움
+      - 그냥 Mock은 가짜 객체로 이해하는게 좋을듯함..
+  - 5장을 통한 기타 팁
+    - ENUM을 잘 활용하자!
+      - 타입에 안전!
+      - ENUM을 사용하여 다양하게 활용이 가능하니 잘 익혀둘것!
+        ```java
+        public enum Level {
+            GOLD(3,null),SILVER(2,GOLD),BASIC(1,SILVER);
+
+            private final int value;
+            private final Level nextLevel;
+
+            Level(int value,Level nextLevel){
+                this.value = value;
+                this.nextLevel=nextLevel;
+            }
+
+            public int intValue() {
+                return value;
+            }
+
+            public Level nextLevel(){
+                return nextLevel;
+            }
+
+            public static Level valueOf(int value){
+                switch (value){
+                    case 1 : return BASIC;
+                    case 2 : return SILVER;
+                    case 3 : return GOLD;
+                    default : throw new UnsupportedOperationException("not defined type : "+value);
+                }
+            }
+
+        }
+        ```
+    - update시에 where 조건이 정상적으로 먹지 않아 모두 update되는 불상사를 막기위해 항상 update요청한데이터, 그렇지않은 데이터 2개의 로우를 테스트할것
+    - 테스트 진행시에는 경우의 수를 잘 따져가면서 해야한다! 대충 한두개 됐다고 넘어가면안됨!!
+    - 테스트 데이터는 변경이 일어나는 경계가 되는값의 전후를 잘 활용하라!
+    - 코드개선시 항상 숙지할것!
+      - 코드에 중복된 부분은 없는지
+      - 코드가 무엇을 하는것인지 이해하는데 불편함은 없는지
+      - 코드가 자신이 있어야할 자리에 잇는지
+      - 앞으로 변경이 일어나면 무엇이 있을수 있고, 그 변화에 쉽게 대응할수잇도록 작성이 되어있는지
+    - 도메인 클래스에 비지니스 로직이 들어가면 테스트소스만들어라! 
+    - 비지니스 로직 처리시 중간에 에러를 일부러 내야한다면, 그런 에러를 낼수있는 서비스 클래스를 새로 만들어라!(되도록이면 테스트 클래스 내부에서!)
