공부한거 추가

--- a/스터디/토비의스프링/토비의 스프링.md
+++ b/스터디/토비의스프링/토비의 스프링.md
@@ -22,7 +22,7 @@
   - 스프링의 장점
     - 단순함 : 복잡한 기술 프레임워크가 아닌, 객체지향적 개발모델인 POJO 프로그래밍!
     - 유연성(+확장성) : 상당히 많은 서드파티를 지원해주고, 프레임워크에 프레임워크를 더하는 확장성이 매우 뛰어남!
-    - 객체지향설계를 지향함으로써, 오브젝트를 어떻게 효과적으로 설계하고, 구현하고, 사용하고, 이를 개선해나갈지에 대한 기준을 마련해준다!! 이를 잘 할수있도록 프레임워크 또한 제공해준다!! 그렇게 만들어져잇는 프레임워크가 그렇게 개발할수있도록 도와주기도한다!! 
+    - 객체지향설계를 지향함으로써, 오브젝트를 어떻게 효과적으로 설계하고, 구현하고, 사용하고, 이를 어떻게 개선해나갈지에 대한 기준을 마련해준다!! 이를 잘 할수있도록 프레임워크 또한 제공해준다!! 그렇게 만들어져잇는 프레임워크가 그렇게 개발할수있도록 도와주기도한다!! 
 
 - 1장 오브젝트와 의존관계
   - 관심사의 분리
@@ -48,8 +48,10 @@
    
       * 객체지향설계원칙(SOLID) : 객체지향의 특징을 잘 살릴수있는설계의 특징을 이야기함.. 디자인패턴은 이 원칙을 지켜서 만들어진것. 즉, 객체지향설계원칙이 크고 일반적인 개념
          - SRP(The Single Responsibilty Principle) : 단일책임의 원칙
-         - OCP(The Open Closed Principle) : 개발폐쇄원칙 
+         - OCP(The Open Closed Principle) : 개방폐쇄원칙 
          - LSP(The Liskov Substitution Principle) : 리스코프 치환 원칙 
+           - "부모 클래스 타입인 A를 사용하는 기존의 프로그램 코드가 자식 클래스 B로 대입 시켰을 때도 문제 없이 작동하도록 하기 위해서, 자식 클래스는 부모 클래스가 따르던 계약 사항을 자식도 따라야한다" 는 원칙
+           - https://pizzasheepsdev.tistory.com/9#:~:text=%EB%A6%AC%EC%8A%A4%EC%BD%94%ED%94%84%20%EC%B9%98%ED%99%98%20%EC%9B%90%EC%B9%99%20(LSP%3A%20Liskov%20Substitution%20Principle)&text=%EC%9D%B4%EC%A0%84%EA%B3%BC%20%EB%A7%88%EC%B0%AC%EA%B0%80%EC%A7%80%EB%A1%9C%20%EC%9D%B4%20%EC%9B%90%EC%B9%99,%EC%97%90%20%EB%AC%B8%EC%A0%9C%EA%B0%80%20%EC%97%86%EC%96%B4%EC%95%BC%20%ED%95%9C%EB%8B%A4'.
          - ISP(The Interface Segregation Principle) : 인터페이스분리원칙
          - DIP(The Dependency Inversion Principle) : 의존관계 역전 원칙 
          
@@ -66,7 +68,7 @@
   - 제어의 역전(IoC)
     - 오브젝트 팩토리 
       - 팩토리 : "객체 생성방법 결정 + 만들어진 객체를 반환" 하는 역할
-         - 오브젝트를 사용하는쪽과, 오브젝트를 생성하는쪽의 역할과 책임을 깔끔하게 분리하려는 목적으로 사용!
+         - 오브젝트를 사용하는쪽과, 오브젝트를 생성하는쪽의 ***역할과 책임을 깔끔하게 분리하려는 목적***으로 사용!
          - 팩토리 메소드 패턴이나 추상팩토리 패턴과는 다름!
       - 설계도로서의 팩토리
          - 설계도 : 컴포넌트의 구조와 관계를 정의. 즉, 오브젝트들간에 관계를 정의!
@@ -136,7 +138,7 @@
   - 단위 테스트는 항상 일관성 있는 결과가 보장돼야한다. DB에 남아있는 데이터와 같은 외부환경에 영향을 받지 말아야하는것은 물론, 테스트를 실행하는 순서를바꿔도 동일한 결과가 보장되도록 만들어야한다.
   - 테스트는 항상 포괄적으로, 꼼꼼하게 진행되어야한다! 어정쩡하게 몇개만 테스트하고 넘어가면안됨!! 충분한 검증을하자!!!
   - 작은 단위로 테스트하는게 유리!
-  - 예외조건에 대한 테스트를 잊지말것!
+  - ***예외조건에 대한 테스트를 잊지말것!***
     - 예외테스트를 통해서 어떤 예외처리를 어디서, 어떻게 진행할것인지를 파악 할수있음!
   - @Test 실행될때마다 새로운 오브젝트가 생성된다!! 한번 만들어진 테스트 클래스의 오베즉트는 하나의 테스트 메소드를 사용하고 나면 버려진다!
   - 테스트도 리팩토링한다! 중복되는코드는 함수로 빼던지, @Before이나 @After를 사용하여 공통 준비작업과 정리를 처리할수있도록하자
@@ -145,7 +147,7 @@
       1. @BeforeClass 를 통해서 테스트간 static으로 가지고있음
       2. @RunWith(SpringJUnit4ClassRunner.class) : 스프링에서 제공해주는 확장클래스(for junit) 이를 사용하면 applicationContext를 주입받을수있는데, 이는 테스트용으로 쓸수 있도록 해주는데, @ContextConfiguration(locations="application.properties 경로")를 통해서 가져오는 설정파일이 동일하다면 @Test시 딱 한번만 applicationContext를 생성!(테스트 클래스에서 모두 공유)
         - 이를 주입받을수 있다는것은, applicationContext를 통해서 bean들을 주입받을수 있다는것!
-    - 스프링 컨테이너없어 테스트 할 수 있는 방법을 우선적으로 고려할것! 그래야 신속하고 빠르게 진행가능!
+    - 스프링 컨테이너없이 테스트 할 수 있는 방법을 우선적으로 고려할것! 그래야 신속하고 빠르게 진행가능!
     - 복잡한 의존관계가 엮여져 있는 오브젝트는 스프링 DI 컨테이너를 잘 활용할것!
     - 테스트 전용 설정 파일을 작성하는것이 좋음!
         
@@ -159,25 +161,25 @@
       - 장점
         - 테스트의 완성도를 높임
         - 버그의 내용을 명확하게 분석
-          - 동등분할 : 같은 결과를 내는 값의 범위를 구분해서 각 대표값으로 테스트를 하는 방법. 작업의 결과의 종류가 true, false 또는 예외발생이라면 각 결과를 내는 입력값이나 상황의 조합을 만ㄷ르어 모둔 경우에 대한 테스트를 해보는게 좋다!
+          - 동등분할 : 같은 결과를 내는 값의 범위를 구분해서 각 대표값으로 테스트를 하는 방법. 작업의 결과의 종류가 true, false 또는 예외발생이라면 각 결과를 내는 입력값이나 상황의 조합을 만들어 모든 경우에 대한 테스트를 해보는게 좋다!
           - 경계값 분석 : 경계의 근처에 있는 값을 이용해 테스트하는것. 숫자의 입력값인 경우 0이나 그 주변값 도는 정수의 최댓값, 최솟값 등으로 테스트하는것!
 
 
 - 3장 템플릿
-  - 템플릿이란 바뀌는 성질이 다른 코드 중에서 변경이 거의 일어나지 않으며, 일정한 패턴으로 유지되는 특성을 가진 부분을, 자유롭게 변경되느 ㄴ성질을 가진 부분으로부터 독립시켜서 효과적으로 활용할수 있도록 하는방법! (즉, 변하는곳과 변하지않는곳을 분리/독립시키는 패턴)
+  - 템플릿이란 바뀌는 성질이 다른 코드 중에서 변경이 거의 일어나지 않으며, 일정한 패턴으로 유지되는 특성을 가진 부분을, 자유롭게 변경되는 성질을 가진 부분으로부터 독립시켜서 효과적으로 활용할수 있도록 하는방법! (즉, 변하는곳과 변하지않는곳을 분리/독립시키는 패턴)
   - 템플릿 메소드 패턴 : 변하는 부분은 하위클래스에서, 변하지않는부분은 상위클래스에서 정의. 즉, 하위클래스에서 오버라이딩한 메소드(변경이 일어나는..)를 상위클래스에서 호출함 => 이는 변할때마다 클래스가 새로 생성되어야함
   - 이에대한 개선으로 전략패턴의 최적화를 생각할수있음. 변하는 부분을 전략패턴으로 사용. 변화되는부분을 메소드의 파리미터로 전달받음(전략객체)으로써 지속적으로 클래스 생성하는것을 막을수있으며, 소스도 더 직관적으로 볼 수 있음. - 템플릿/콜백 패턴 (전략객체를 위한 인터페이스는 보통은 하나의 메소드를 사용하며 이러한 전략객체를 메소드로 전달할때 익명클래스로 생성하여 전달해줌 - 마이크로 DI)
     - 마이크로DI : 일반적으로 DI는 의존관계에 있는 두개의 오브젝트와 이 관계를 다이내믹하게 설정해주는 오브젝트 팩토리(DI 컨테이너), 이를 사용하는 클라이언트라는 4개의 객체에서 일어난다. 이러한 DI가 하나의 메소드안에서 객체를 생성하고 전달하여 의존관계를 셋팅하여 매우 작은 단위의 코드와 메소드 사이에서 일어나기도 하는데, 이를 마이크로 DI라고 한다.
 
   - 템플릿/콜백 패턴 : 전략패턴의 컨텍스트를 템플릿이라 부르고, 익명 내부클래스로 만들어지는 오브젝트를 콜백이라고 부른다.
-    - 템플릿 : 어떤 목적을 위해 미리 만들어둔 모양이 있는 틀. 고정된 틀 안에서 바꾸ㅡㄹ수 있는 부분을 넣어서 사용하는 경우에 템플릿이라함
-    - 콜백 : 실행되는 것을 목적으로, 다른 오브젝트의 메소드에 전달되는 오브젝트(callbackObj). 즉, 템플릿안에서 실행될 목적으로 전달되는 객체임! 보통은 단일 메소드를 사용하고 특정 기능을 위한 한번 호출하는게 일반적
+    - 템플릿 : 어떤 목적을 위해 미리 만들어둔 모양이 있는 틀. 고정된 틀 안에서 바뀔수 있는 부분을 넣어서 사용하는 경우에 템플릿이라함
+    - 콜백 : 실행되는 것을 목적으로, 다른 오브젝트의 메소드에 전달되는 오브젝트(callbackObj). 즉, ***템플릿안에서 실행될 목적***으로 전달되는 객체임! 보통은 단일 메소드를 사용하고 특정 기능을 위한 한번 호출하는게 일반적
       - obj.method(callbackObj)
     - 특징 
       - 메소드 단위로 사용할 오브젝트를 매번 새롭게 전달
       - 클라이언트 메소드 내의 정보를 직접 참조! (클라이언트가 템플릿 메소드 호출시 오브젝트를 익명내부 클래스로 만들기때문에 그때의 클라이언트에 담긴 정보를 참조가능! 강력하게 결합되어있음!)
       - 컨텍스트 호출과 동시에 전략DI(익명내부클래스)를 수행하는것!
-      - 템플릿은 한번에 하나 이상의 콜배긍ㄹ 사용할수도있고, 하나의 콜백을 여러번 호출할수도 있다!
+      - 템플릿은 한번에 하나 이상의 콜백으로 사용할수도있고, 하나의 콜백을 여러번 호출할수도 있다!
 
   - 3장을 통한 기타 팁
     - 중복된 코드는 먼저 메소드로 분리 => 그 중 일부 작업을 필요에 따라 바꾸어 사용해야 한다면 인터페이스를 사이에 두고 분리해서 전략패턴을 적용 & DI로 의존관계 관리 => 바뀌는 부분이 한 애플리케이션 안에서 동시에 여러 종류가 만들어 질수 있다면 템플릿/콜백패턴을 적용
@@ -199,7 +201,7 @@
       - 체크 예외
         - Excpetion or Exception클래스의 서브클래스 (Not RuntimeException)
         - 예외처리 반드시 해주어야함(컴파일 에러남)
-        - 복구할 가능성이 있는 경우에 사용. 적절한 처리로직 필요
+        - ***복구할 가능성이 있는 경우***에 사용. 적절한 처리로직 필요
         - 어플리케이션 예외는 체크예외를 해주는게 좋음
           - 비지니스 로직상에서 복구가 필요한 에러들..(엄밀히 말하면 이 또한 기술적으로는 시스템에러가 아니니깐 정상로직이나, 일반적인 flow에서 예외상황이라고 생각하면 좋을듯) ex) 인출시 잔고없을때 진행하는 로직
   - 예외처리 방법
