--- a/스터디/토비의스프링/토비의 스프링.md
+++ b/스터디/토비의스프링/토비의 스프링.md
@@ -249,7 +249,7 @@
     - 이런 단일책임원칙을 잘 지켜졌을때, 수정해야할 부분이 명확해지며, 수정해야할곳도 최소한으로 줄게된다
   - 테스트와 서비스 추상화
     - 로우레벨의 다양한 기술(하는 역할은 동일)에 대해 인터페이스를 활용하여 일관성 있는 접근 방법을 제공할수잇다. 이를 통해서 확장 불가능한 API도 서비스 추상화를 통해서 손쉽게 테스트가 가능하다
-    - 특히나 외부리소스 연동에는 서비스 추상화를 통해서 더욱 손쉽게 원하는 오브젝트에만 집중하여 테스트가 가능하다
+    - ***특히나 외부리소스 연동에는 서비스 추상화를 통해서 더욱 손쉽게 원하는 오브젝트에만 집중하여 테스트가 가능하다***
       - 예를들어, 서비스계층에서 특정기능 수행시 확인 메일발송 기능이 있을때, 메일발송은 주된로직이 아니므로 이를 추상화해놓는다면(mock객체 생성) 빠르게 서비스의 주 기능을 테스트 해볼수있다
     - 테스트 대상으로부터 전달받은 정보를 검증할수있도록 설계된것을 목 오브젝트라한다
       - 스텁 + 테스트 결과 및 테스트 대상 오브젝트와 이와 연계된 의존오브젝트간에 일어나는일을 검증
@@ -317,7 +317,7 @@
       - *JDK의 다이나믹 프록시는 특정 인터페이스를 구현한 오브젝트에 대해서 프록시 역할을 해주는 클래스를 런타임시 내부적으로 만들어준다. 런타임시에 만들어지기때문에 클래스 소스가 따로 남지 않을뿐이지 타깃 인터페이스의 모든 메소드를 구현하는 클래스가 분명히 만들어진다..
     - ProxyFactoryBean
       - 서비스 추상화를 프록시 기술에도 적용
-      - 다이나믹프록시에서 사용하는 invocationHandler는 Proxy 사용을 위해 타겟을 직접 넣어주며 타겟의 기능을 직접 실행시켜주어야하는데, MethodInterceptorsms 추상화가 되어있어서 MethodInvocation.proceed()만 호출하는 타깃을 실행시킨다. 그렇기 때문에 부가기능에 집중할수 있다. (MethodInvocation에는 타깃오브젝트에대한 정보가 담겨져있다)
+      - 다이나믹프록시에서 사용하는 invocationHandler는 Proxy 사용을 위해 타겟을 직접 넣어주며 타겟의 기능을 직접 실행시켜주어야하는데, MethodInterceptor는 추상화가 되어있어서 MethodInvocation.proceed()만 호출하는 타깃을 실행시킨다. 그렇기 때문에 부가기능에 집중할수 있다. (MethodInvocation에는 타깃오브젝트에대한 정보가 담겨져있다)
       - 작은 단위의 템플릿/콜백 구조를 응용해서 적용했기때문에 템플릿 역할을 하는 MethodInvocation을 싱글톤으로 두고 공유가능
       - 내부적으로 java의 다이내믹프록시를 사용함!
       - 다이나믹 프록시를 생성할때, Pointcut을 사용하여 적용해야할 대상인지를 구분하고, 적용해야할 부가기능이 정의된 advice를 invocation콜백에 적용하여 타깃을 감싼다(프록시 적용)
@@ -402,7 +402,7 @@
       - 통합테스트 : 두개 이상의 성격이나 계층이 다른 오브젝트가 연동하도록 만들어 테스트하거나, 외부의 DB나 파일, 서비스 등의 리소스가 참여하는 테스트 
       - 가이드
         - 항상 단위테스트 먼저 고려할것
-        - 하나의 클래스나 성경과 목적이 같은 긴밀한 클래스 몇개를 모아서 외부와의 의존관계를 모두 차단하고 필요에 따라 스텁이나 목 오브젝트등의 테스트 대역을 이용하도록 테스트를 만들것
+        - 하나의 클래스나 성격과 목적이 같은 긴밀한 클래스 몇개를 모아서 외부와의 의존관계를 모두 차단하고 필요에 따라 스텁이나 목 오브젝트등의 테스트 대역을 이용하도록 테스트를 만들것
         - 외부 리소스 사용해야만 가능한 테스트는 통합테스트로 만들것
         - DAO는 DB연동해서 테스트하는게 좋고, 충분히 검증이 끝나면 대역으로 전환할것! 물론, 나중에 다른 오브젝트와 실제 엮어서 통합테스트도 함께 진행하여야함!
         - 결국 통합테스트는 반드시 이루어져야함! 하지만 단위 테스트를 충분히 거쳤다면 통합테스트에 대한 부담은 많이 줄수 있음
@@ -410,9 +410,9 @@
         - 스프링 테스트 컨텍스트 프레임워크를 이용하는 테스트는 통합테스트! 가능하면 스프링의 지원없이 직접 코드레벨의 DI를 사용하면서 단위테스트하는게 좋음!(물론, 다 그렇게 되기는 어려움)
         - => 테스트를 잘 작성하면서 진행하지않으면 소스 리팩토링에 대한 "용기" 를 잃어버리기 때문에 코드의 품질은 떨어진다!!
     - 스프링의 빈(bean)은 기본적으로 클래스 이름과 프로퍼티로 정의되고, 스프링은 지정된 클래스 이름을 가지고 리플렉션을 이용해서 해당 클래스의 오브젝트를 만든다
-      - 리플랙션(reflection) 을 사용하면 private 생성자도 만들어주기때문에(reflection은 private 접근규약을 위한가능), 빈으로 등록할때 스태틱메소드로 객체를 생성해서 빈으로 등록해주어야한다!
+      - 리플랙션(reflection) 을 사용하면 private 생성자도 만들어주기때문에(reflection은 private 접근규약을 위한가능), private 생성자로 되어있는 오브젝트를 빈으로 등록할때 스태틱메소드로 객체를 생성해서 빈으로 등록해주어야한다!
     - xml 설정시 Class 타입은 value를 이용해 클래스 또는 인터페이스의 이름을 넣어주면된다. 스프링은 프로퍼티의 타입이 Class인 경우는 value로 설정한 이름을 가진 Class 오브젝트로 자동변환해준다.
-    - 다른 모듈의 DAO접근시에는 해당 DAO모듈을 지는 서비스계층을 거쳐가자!
+    - 다른 모듈의 DAO접근시에는 해당 DAO모듈을 갖는 서비스계층을 거쳐가자!
     - 테스트 프레임워크에서 @Transactional 사용시 자동으로 rollback된다! 이를 막기위해서는 @Rollback(false)를 함께 선언해준다!
     - 되도록 통합 테스트할때는 @Transactional을 사용하자
 
@@ -443,6 +443,7 @@
     - EmbeddedDatabase로 추상화!
       - 스프링 컨테이너가 종료될때 알아서 shutdown 되기때문에 종료코드가 필요없음
     - 트랜잭션도 된다!
+      - 일괄처리가 필요한 로직에 있어서는 내장형DB를 생각해보는게좋겠지
   - Spring 3.1 DI
     - 자바언어의 변화와 스프링
       - 애노테이션의 메타정보활용
@@ -500,3 +501,69 @@
         - BeanFactoryTransactionAttribtteSoruceAdisor
     - 단지 주입받는게 아닌, 다른 작업이 필요하면(like 주입받는 오브젝트로 새로운 오브젝트를 생성하는..) 수정자 메소드에 @Autowired 선언해서 만들어주면댐
     - 설정정보가 아주 많으면 분리해주는것이 좋으나, 그렇지않으면 하나로 관리하는것이 좋음. 그렇다고 구분없이 하나에다가 다 때려받는것이아니라, 스태틱 중첩 클래스를 활용할것!(스태틱 중첩클래스위에 @Configuration 하나 붙여주면끝)
+
+- 8장 스프링이란 무엇인가?
+  - 스프링이란?
+    - ***자바 엔터프라이즈 개발을 편하게 해주는 오픈소스 경량급 애플리케이션 프레임워크***
+      - "애플리케이션 프레임워크"
+        - 일반적인 프레임워크는 특정계층에서 한가지 기술분야에 집중이 되는데(ex. ORM은 DB쪽), 스프링은 애플리케이션 전 영역을 포괄하는 범용적인 프레임워크이다. 
+        - 애플리케이션 개발의 "전 과정"을 빠르고, 효율적으로 개발하기위함!
+        - 단지 여러계층의 다양한 기술을 한데 모았다는것 이상으로 애플리케이션 전 영역을 관통하는 일관된 프로그래밍 모델과 핵심 기술을 가진다!
+      - "경량급"
+        - 이전에 있었던 무거운 프레임워크나 기타 환경에 종속되었던것들로부터 훨씬 자유롭고 가볍기때문에 경량이라 표현
+        - 예전에는 고가의 무거운 WAS 가 필요했고, 그에 맞는 설정파일구조와 패키징 등 개발환경이 필요했는데, 스프링은 톰켓이나 제티를 사용하여 서블릿 컨테이너로만도 개발이 가능하다! 또한 이런것들을 사용할때, 엔터프라이즈 개발의 고급기술을 대부분 사용할수 있다
+      - "자바 앤터프라이즈 개발을 편하게"
+        - 개발자가 복잡하고 실수하기 쉬운 로우 레벨 기술을 많이 신경쓰지 않으면서 사용자의 요구사항인 비지니스로직을 빠르게 개발해 나가는것!
+        - 스프링 자체에 집중이아닌 비지니스 로직에 집중!  
+    - 엔터프라이즈 서비스 기술을, POJO 방식으로 개발된 애플리케이션의 핵심로직을 담은 코드에 제공할수있도록 해주는것이 스프링의 강력한 특징과 목표!
+      - POJO(Plain Old Java Object)?
+        - 자바의 단순한 오브젝트
+          - ***객체지향 원리에 충실하고 환경과 기술에 종속되지않는 오브젝트!***
+        - POJO로 개발할수있게 해주는 가능기술이 IoC/DI, AOP, PSA 이다
+          - IoC/DI
+            - A->B 의존관계에서, B는 자유롭게 확장가능하고(확장에 열려있음) B가 변경되도 A는 아무런 영향을 받지않고(변경에는 닫힘) 그대로 유지가능한것! (OCP 실현)
+            - 활용
+              - 핵심기능의변경(전략패턴)
+              - 핵심기능의 동적변경
+              - 부가기능의 추가(데코레이터패턴)
+              - 인터페이스의 변경
+                - 인터페이스 호환안될때 어댑터패턴으로 접근. 이에 더 나아가 좀더 일반화하면 서비스 추상화(PSA)
+              - 프록시
+              - 템플릿과 콜백(마이크로 DI)
+              - 싱글톤과 오브젝트 스코프
+              - 테스트
+                - 고립가능케하여 필요한 테스트에 집중 가능
+          - AOP
+            - POJO 만으로 엔터프라이즈 애플리케이션을 개발하면서도 엔터프라이즈 서비스를 선언적으로 제공하는데 반드시 필요한 기술!
+            - 적용기법
+              - 스프링이 제공해주는 다이내믹 프록시사용
+                - public 메소드 호출에만 적용가능
+              - AspectJ를 활용하여 다양한 조인포인트 사용 
+          - PSA
+            - 환경과 세부기술의 변화에 관계없이 ***일관된 방식***으로 기술에 접근할수있게해줌
+  - 엔터프라이즈 개발의 복잡함
+    - 왜 복잡한가?
+      - 엔터프라이즈 시스템을 개발하는데는 순수한 비지니스 로직을 구현하는것 외에도, 기술적으로 고려할 사항이 많음
+      - 비지니스 로직의 복잡함
+      - => 위 두개가 짬뽕되고 강력한 결합을 초래.. 
+    - 해결책
+      - 기술적복잡함과 비지니스로직의 복잡함을 최대한분리하자!
+      - 기술의 적용사실이 코드에 직접 반영되지않는, 즉 이로인해 코드의 설계와 구현방식을 제한하지않는 비 침투적인 기술을 사용!(스프링!)
+        - EJB는 어떤 기술을 적용했을때 그 기술과 관련된 코드나 규약등이 코드에 등장하는 경우를 침투적인 기술이라함
+  - 복잡함을 상대하는 스프링의 전략
+    - 기술적 복잡함을 상대하는 전략
+      - 서비스 추상화
+        - 기술에 대한 접근방식이 일관성이 없고, 특정환경에 종속적인것을 해결
+      - AOP
+        - 기술적인 처리를 담당하는 코드가 성격이 다른코드에 섞여서 등장
+          - 기술적인 처리라는것은 트랜잭션같은것!
+    - 비즈니스와 애플리케이션 로직의 복잡함을 상대하는 전략
+      - 자바의 객체지향 언어를 잘 살릴수있도록 해줌!
+      - POJO
+    - => 이 전략들의 도구는 기본적으로 객체지향과 DI
+      - 기술적인 복잡함을 해결하기위해서는 DI가 바탕이 된 여러가지 기법이 활용! 
+      - 비지니스 로직의 복잡함을 해결하기 위해서는 DI보다는 객체지향 설계 기법이 중요! (근데 DI도 객체지향설계를 위한 도구인디..??)
+      - 기술적인 코드에 침범당하지않은(기술의 복잡함이 잘 분리된) 비지니스로직은 객체지향적인 특성을 잘 살린 상속, 다형성, 위임을 포함해서 객체지향 디자인패턴과 설계기법을 잘 녹일수있다!!
+  - 정리
+    - 엔터프라이즈 서비스를 개발하는데 있어서, 기술적 복잡함과 비지니스로직의 복잡함을 분리하여 POJO 방식(객체지향 추구, 기술과 환경에 종속x)으로 비지니스로직에 집중할 수 있도록 도와주는것이 스프링! 이를 가능하도록 기술적으로 도와주는것이 IoC/DI, AOP, PSA 이다   
+    이를 통해 애플리케이션 개발의 모든 기술과 영역을 종합적으로 다루는 애플리케이션 프레임워크를 실현!
