공부한거 추가

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -27,7 +27,123 @@
       - 꼭 반드시 두개이상을 사용해야하는것은 아님..
         - 스프링 웹기술을 사용하지않는다면 루트 애플리케이션 컨텍스트만 등록하면됨
         - 서블릿 컨텍스트 단일구조로 사용하기도함
+  - 컨테이너가 자동등록하는 빈
+    - ApplicationContext
+    - BeanFactory
+      - ApplicationContext도 BeanFactory를 상속받고있지만, 내부적으로 빈 팩토리 오브젝트를 별도로 만들어놓고 위임하는 방식으로 돌아가기때문에, BeanFactory를 직접적으로 주입받는객체랑 ApplicationContext의 BeanFactory 객체는 다르다!
+    - ResourceLoader
+      - 리소스 로드 가능
+      - applicationContext가 상속받고있음
+    - ApplicationEventPublisher
+      - 컨테이너 안의 빈 오브젝트간에 이벤트 발생 & 전달받을수있는기능
+      - 굳이 컨테이너에 의존적인 방법 사용할 필요가 없기에 거의 사용안함(필요하면 빈 사이에 독자적인 이벤트/리스터 구성을 사용하면됨)
+    - systemProperties
+      - JVM관련 설정값들
+      - ```System.getProperty("")``` 와 같이 쓰는것이 좋음 (Property로 구현되어있기에, 타입으로 가져오기가좀.. 굳이 가져오려면 @Resource Properties systemProperties)
+      - 해당 빈 이름은 사용하지말것! (systemProperties 는 빈이름등록금지)
+    - sysetmEnvironement
+      - 시스템 환경변수관련 (OS 종류나 서버환경 설정에 따라 달라질수있음)
+      - ``` @Value(#{systemEnvironment['Path']}) String path; ```와 같이 사용가능
+      - 해당 빈 이름은 사용하지말것! (sysetmEnvironement 는 빈이름등록금지)
+  - 프로토타입과 스코프
+    - 프로토타입
+      - 생명주기 
+        - 컨테이너가 생성은 해주지만, 그 이후의 관리는 주입받은 빈이 알아서 해야함
+      - 용도
+        - new 키워드로 ***매번 새롭게 생성***해 주어야할때, 컨테이너에 등록된 ***빈을 주입받아야 한다***면 프로토타입을 사용하자!
+      - 사용방법
+        - DI
+          - @Scope에 proxyMode를 설정해줌
+            - proxymode를 사용하면 보통 DI처럼 사용가능하며, 주입된 객체는 프록시패턴을 통해 만들어진 오브젝트이다. 이 오브젝트가 스코프에 적절히 맞추어 객체를 연결시켜준다
+              - 겉으로만 봐서는 프록시 객체를 사용한것인지 당연 알수없음.. 하지만 내부적으로는 proxymode에 정의된대로 오브젝트를 연결해줌
+              - *proxyMode 종류
+                - ScopedProxyMode.INTERFACES : 프록시 빈이 인터페이스를 구현하고있고, 클라이언트에서 인터페이스로 DI받을때 사용 (jdk dynamic proxy 사용)
+                - ScopedProxyMode.TARGET_CLASS : 프록시 빈 클래스를 직접 DI 할때 사용 (cglib 사용)
+                  - 위 둘 차이 설명 : https://stackoverflow.com/questions/21759684/interfaces-or-target-class-which-proxymode-should-i-choose
+                  - 결론은 인터페이스를 사용하고있으면 INTERFACES를, 그렇지않으면 TARGET_CLASS를 사용하면됨
+        - DL(dependency lookup)
+          - Provider\<T\> 사용
+            - JSR-330(DIJ) 에 추가된 표준인터페이스
+            - @Autowired로 주입받고 get()으로 가져오면 끝
+  - 싱글톤, 프로토타입 외 스코프 (웹 환경에서만 의미가 있음)
+    - 프로토 타입과는 달리 스프링이 초기화에서부터 ***제거***까지 모두 관리
+    - 사용방법 : 프로토타입과 동일
+    - 종류
+      - 요청 스코프
+        - 요청별로 독립적인 빈이 만들어짐.
+        - 상태값을 저장해둬도 안전
+      - 세션 스코프
+        - Http 세션과 같은 존재 범위를 갖는 빈
+        - 세션 타임이 종료될때까지유지되므로 로그인 정보나 사용자별 선택옵션 등을 저장해두기에 좋음
+      - 애플리케이션
+        - 서블릿 컨텍스트에 저장되는 빈 오브젝트
+        - 컨텍스트가 존재하는 동안 유지되는 싱글톤 스코프와 비슷한 존재범위를 가짐
+        - 멀티스레드에 주의할것
+  - 빈 생명주기 메소드
+    - 초기화 메소드
+      - 빈 오브젝트 생성 + DI 완료된 이후 진행
+      - @PostConstruct
+    - 제거메소드
+      - 컨테이너가 종료될때 호출. 빈이 사용한 리소스 반환하거나 종료전에 진행
+      - @PreDestory
+  - 빈의 종류
+    - 애플리케이션 로직 빈 : 비지니스 로직, 서비스 오브젝트 , DAO..
+    - 애플리케이션 인프라 빈 : 대개 스프링에서 제공하는 추상화 되어있는 빈.. 직접 로직작성은 안하고 애플리케이션 로직 빈에 영향을 주는 빈. 기술API도 여기 속함 ex) 트랜잭션, DataSource
+    - 컨테이너 인프라 빈 : 스프링 컨테이너 기능을 확장해서 빈의 등록과 생성, 관계설정, 초기화 등의 작업에 참여하는 빈 ex) AOP
+      - 빈 후처리기 구현체들이 여기에 속하겠지.. (ex. \<context:component-scan\> 설정했을때 생성되는 빈들)
+  - 런타임환경과 프로파일
+    - 환경에 따라 설정파일 외에도 등록하는 빈이 달라져야 할때가 있는데, 지정한 프로파일에 따라 빈이 생성될수 있도록 가능!
+    - 런타임 환경은 애플리케이션 컨테스트에 새롭게 도입된 개념!
+    - 컨텍스트 내부에 Environment 인터페이스를 구현한 런타임 환경 오브젝트가 만들어져서 빈을 생성하거나 의존관계를 주입할때 사용한다
+      - 런타임 환경은 "프로파일"과 "프로퍼티 소스" 로 구성되는데, 환경에 따라 프로파일과 프로퍼티 소스가 다르게 설정된 Environment 오브젝트가 사용
+      - 프로파일안에 환경에 따라 각기 구성되는 빈들을 정의해놓으면, 애플리케이션 컨택스트가 시작될때 지정된 프로파일을 실행시킴으로써 환경에 필요한 빈을 만드는개념이다!
+        - @Profile("dev") 로 선언하면 spring.active.profile이 dev일때만 실행된다.. (활성 프로파일은 prod로 해놓으면 당연실행안됨)
+        - 아무것도 지정하지않으면 어떤 프로파일이던 상관없이 실행
+        - @Profile("dev","prod") 이렇게 여러개도 지정가능
+  - 프로퍼티 소스
+    - 스프링에서 사용되는 프로퍼티 종류
+      - 환경변수
+        - OS의 환경변수. OS 레벨에서 동일한 값을 전달해야할때 사용
+        - System.getEnv()
+      - 시스템 프로퍼티
+        - JVM 레벨
+        - System.getProperties()
+      - JNDI
+        - 웹 어플리케이션 레벨
+      - 서블릿컨텍스트 파라미터
+        - 웹 어플리케이션 레벨. JNDI값을 설정하기 번거로울때
+        - web.xml에 서블릿 컨텍스트 초기 파라미터를 프로퍼티로 사용가능
+        - \<content-param\> 
+        - @Autowired ServletConetxt servletContext
+      - 서블릿 config 파라미터
+        - 해당 서블릿의 서블릿 컨텍스트에만 영향. 즉, 위의 종류중에 범위가 제일 좁음
+        - \<init-param\>
+        - @Autowired ServletConfig servletConfig
+    - 프로파일의 통합과 추상화(Environment)
+      - 프로퍼티의 종류와 그에 따라 달라지는 접근 방법을 프로퍼티 소스라는 개념으로 추상화
+      - 이를 통해 일관된방식으로 접근. 동일한 이름이 있을 경우에 우선순위에 따라 정해짐!
+      - 사용방법
+        - Environment.getProperty()
+        ```java
+          @Autowired
+          Environment env
+          ..
+          env.getProperty("os.name");
+        ```
+        - PropertySourceConfigurerPlaceholder 빈 등록 & @Value
+        ```java
+          @Value("${db.username}")
+          private String userName;
+        ```
+      - @PropertySource("classpath:/database.properties")
+        - 이렇게 가져올수있음
+        - 컨텍스트에 기본적으로 등록되는 프로퍼티 소스보다 우선순위 낮음
+          - 우선적용하고 싶은 프로퍼티있거나 기타 프로퍼티 관련한 내용은 아래 래퍼런스 참고할것!
 
+      - 스프링부트에서 프로퍼티 활용하는 레퍼런스
+        - https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#features.external-config
+
+           
   - 1장을 통한 기타팁
     - /WEB-INF/**/*Context.xml (web.xml)
       - WEB-INF 폴더 밑의 모든 서브폴더에 Context.xml로 끝나는 모든 파일을 찾는다
@@ -66,3 +182,28 @@
         ```
       - @Bean 을 통해서 빈을 등록할떄, 선언한 메소드는 자동주입되므로 @Autowired와 동일하게 동작한다(@Bean이 @Autowired를 포함한다고 보면됨!)
     - @Value는 필드, 수정자메소드, 메소드파라미터에서 사용가능
+    - 프로퍼티 파일을 이용한 값 설정
+      - 수동변환(PropertyPlaceHolderConfigurer)
+        - 프로퍼티 치환자(placeholder)를 사용
+        - 빈 팩토리 후처리기에서 실행됨(빈 후처리기가 아님)
+          - 빈 후처리기는 매 빈 오브젝트가 만들어진 직후에 오브젝트의 내용이나 오브젝트 자체를 변경할때 사용하고, 빈 팩토리 후처리기는 빈 설정 메타정보가 모두 준비됐을대 빈 메타정보 자체를 조작하기 위해 사용
+          - property 파일을 읽어서 메타정보의 값 정보에서 치환자(${}) 를 후처리기 시점에 찾아서 적절한 value로 바꿔준다!
+          - 빈 팩토리 후처리기가 빈 후처리기보다 앞서서 있는듯함
+            - 필드에 @Value로 셋팅하였을때, 생성자 호출하는 시점에는 값이 주입되어있지않은데, 메소드 수정자 주입시에는 값이 주입되어있었음.. (더 확실히 알기위해서 좀더 찾아봐야할듯)
+      - 능동변환(SpEL)
+        - #{} 사용
+        - 표현식을 사용해 다른 빈 오브젝트에 직접 접근할수도있음
+          - ex) #{hello.name} (hello라는 빈 이름의 name 프로퍼티) 
+    - 프레젠테이션 계층의 입력방식에 따라서 비지니스 로직을 담당하는 코드가 휘둘리지않고 독립적으로 존재하기 위해서는 최대한 도메인객체를 참조하도록 해야한다(도메인 객체만 잘 만들어져있다면...)
+      - 컨트롤러에서 요청받은 데이터를 오브젝트에 담았을때, 해당 오브젝트에 도메인 객체를 담고있다면, 이는 컨트롤러에서 요청하는 데이터가 변경된다할지라도 서비스 계층에서 데이터를 사용하는데에 있어서 큰 변경이 없을것이다!
+      - 그리고 여기에서 컨트롤러에서 요청시 데이터를 오브젝트에 담을때 새롭게 객체를 생성할텐데, 도메인 객체에 데이터를 셋팅하기위해서 DAO를 통해서 데이터를 select해 올 필요가 있을수있다. 이때 오브젝트는 요청마다 새롭게 생성되고, 컨테이너 등록된 빈(dao)을 사용해야하므로 프로토타입으로 사용하는것이 좋다!
+    - @Import
+      - @Configuration 클래스 가져온다! @Enable.. 클래스에서 많이 사용된다함
+    - @Configuration은 각각 하나의 XML과 같다고 볼수있다! 설정의 성격에 따라서 잘 분리하자!! 
+    - @EnableTransactionnManagement
+      - 트랜잭션 사용할때 사용.. @Transactional 사용하기 위한 AOP 관련 빈들을 등록해줌
+      - 스프링부트에서도 반드시 써야하는것인지 확인필요(어떤 의존성을 불러오면 자동으로 등록되는것같긴한데.. 확인필요하다!)
+    - 프로퍼티 파일은 저장소에 올리지 말자! 그냥 sample properties만 올릴것!
+    - 롤백 테스트는 내장형 DB로 확인하는것도 좋다!
+    - -D 옵션은 JVM 옵션 (-Dspring.profile.active=prod)
+    
