공부한 내용 추가

--- a/스터디/토비의스프링/토비의 스프링2.md
+++ b/스터디/토비의스프링/토비의 스프링2.md
@@ -206,4 +206,122 @@
     - 프로퍼티 파일은 저장소에 올리지 말자! 그냥 sample properties만 올릴것!
     - 롤백 테스트는 내장형 DB로 확인하는것도 좋다!
     - -D 옵션은 JVM 옵션 (-Dspring.profile.active=prod)
-    
+    - 팩토리 빈을 통해서 빈을 등록하는 방법 정리(자세한 factory bean 관련 내용은 toby Spring vol 1을 참고할것!) : https://live-everyday.tistory.com/224
+
+- 2장 데이터 엑세스 기술 (해당 기술의 자세한 내용은 필요할때 다시 참고하면 좋을듯)
+  - DAO 패턴
+    - 도메인 오브젝트만을 사용하는 인터페이스를 통해서 데이터 엑세스 기술을 외부에 노출하지않도록 만드는것! => POJO => 기술에 영향x, 단위테스트 용이
+    - 예외도 checked error 나 특정 기술에 종속되어있는 에러x.. 또한 되도록 런타임에러로뺄것!
+      - 런타임 에러로빼는이유는 데이터 엑세스 중에 발생하는 예외는 대부분 복구할수 없기때문!
+  - JDBC
+    - 스프링의 JDBC 접근방법
+      - JdbcTemplate(Datasource)
+        - 파라미터 소스
+          - 쿼리에서 값이 매번 달라지는 경우, 치환자를 만들어서 바인딩하는 방법을 사용하는게 좋은데, 바인딩을 위해 넘겨주는 값을 파라미터 소스라고 한다
+          - ex) INSERT INTO MEMBER(ID,NAME,POINT) VALUES(:id,:name,:point); 라면, :id, :name, :point에 값을 바인딩해줌
+          - 종류
+            - Map/MapSqlParameterSource : key, value 값으로 전달해주고, key값으로 바인딩함 ex) key가 id,name,point 이렇게 들어가있어야함
+            - BeanPropertySqlParamenterSource : 자바빈 스타일의 오브젝트를 전달해주면 해당 필드 이름으로 바인딩함
+        - RowMapper
+          - 데이터를 읽어올때 BeanPropertyRowMapper를 넘겨주면, BeanPropertyRowMapper를 생성할때 넘겨준 클래스를 바탕으로 데이터를 바인딩하여 해당 객체를 리턴해줌
+      - SimpleJdbcInsert
+        - DB메타정보 활용하여 db에 insert하는데 용이하게 해줌
+        - insert 할때 일일이 컬럼 일일이 추가해서 쿼리만들 필요없음! 어떤 테이블에 insert할건지만 명시해주면 해당 테이블의 메타정보를 가져와서 셋팅
+        - 이를 통해서 자동증가 컬럼은 제외할수도잇으며, 자동증가 컬럼의 현재값도 가져올수있다!
+      - SimpleJdbcCall
+        - 프로시저나 함수 콜
+    - 스프링 JDBC가 해주는 작업
+      - connection 열기와 닫기
+        - connection 열고 닫는 시점은 스프링 트랜잭션 기능과 맞물려서 결정
+      - statement(preparedstatement) 준비와 닫기
+      - statement 실행
+      - resultset 루프
+      - 예외처리와 변환
+        - 런타임예외로 변경
+        - 일관된 DataAccessException 계층구조내의 예외로 전환
+      - 트랜잭션 처리
+      - *개발자가 해야할작업 : SQL, SQL에 넘겨줄 파라미터, 실행결과를 어떤 오브젝트에서 받을것인지, DB 커넥션 가져올 DataSource 정의
+    - 스프링 JDBC DAO
+      - 도메인 오브젝트 or 테이블 단위로 DAO 생성! => DAO는 여러개
+  - ORM
+    - 스터디필요
+  - 트랜잭션
+    - 트랜잭션 추상화와 동기화
+      - 트랜잭션 추상화 
+        - 트랜잭션 서비스의 종류나 환경이 바뀌더라도 트랜잭션 사용하는 코드는 그대로유지!
+        - PlatformTransactionManager(구현체로는 jdbc, jpa, hibernate 등이있음)
+          - 구현체
+            - DataSourceTranactionManager
+            - JpaTransactionManager
+            - HibernateTransactionManager
+            - JtaTransactionManager
+              - 여러개 DB를 사용할때, 꼭 DB뿐 아니라 JMS와 DB 등 짬뽕된 트랜잭션이 필요할때, 여러대 서버에서 분산되어 진행되는 작업 등 트랜잭션으로 연결이 필요할때 사용!
+              - 이를 지원하는 WAS를 사용하거나, 독립적으로 사용할수있도록 해주는 프레임워크가 필요함
+          - 만약 Datasource가 다르고 각 Datasource에 대한 트랜잭션을 사용해야한다면 당연히, 각 Datasource를 가지고 트랜잭션매니저를 등록하면됨. 즉, 2개 등록..
+            - @Tranactional 에서 사용해야할 트랜잭션 매니저를 지정하면됨
+      - 트랜잭션 동기화
+        - 트랜잭션을 일정 범위 안에서 유지해주고, 어디서든 자유롭게 접근할수있게 만들어줌!(이로 인해 전파(propagation) 옵션을 활용가능)
+    - 트랜잭션 경계설정 방법
+      - 코드로짜기
+        - PlatformTasactionManager를 직접사용해도되나, try catch 블록을 써야하므로 TransactionTemplate을 이용하면 좋음
+        - TransactionTemplate(PlatformTrasactionManager)
+        - 트랜잭션 관련 ***디버깅할때는 PlatformTasactionManager***를 사용하는것이 좋은데, 해당 객체에서 getTransaction()으로 전달받은 ***TransactionStatus*** 객체를 이용하면 현재 트랜잭션이 새로 시작된것인지 기존 트랜잭션에 참여한것인지 또는 종료된 것인지 모두 확인가능!
+      - 선언적 트랜잭션 경계설정
+        - 선언적 트랜잭션 경계썰정은 트랜잭션 프록시빈(빈 후처리기에서 프록시 오브젝트를 반환) 덕분에 가능!
+        - 방법
+          - xml 설정파일에 pointcut, advice 정의 
+            - pointcut은 기본적으로 ***인터페이스***에 적용!
+              - 스프링AOP의 동작원리인 JDK 다이내믹 프록시는 인터페이스를 이용하여 프록시를 만들기떄문!
+              - 그러나, 인터페이스없이 프록시를 만들수도있긴함...
+              - *특정 클래스로 지정해서 aop를 적용하면, 트랜잭션 적용과 상관없는 메소드도 포인트 컷의 선정대상이된다.. 불필요한 리소스 소모.. 인터페이스 분리 원칙에 따라 클라이언트가 필요한(실제적으로 DB의 데이터를 핸들링하는 기능)것만 나타나있고, 바로 그 기능들이 트랜잭션 적용대상들이여야하므로 인터페이스를 기준으로 적용하는것이좋음!(하지만 이게 또 어노테이션 쓸때는 꼭 인터페이스에 적용하는게 좋지않음..)
+          - 어노테이션(@Transactional)
+          - 참고사항
+            - 프록시 모드 (JDK 다이내믹 프록시 vs CGLIB)
+              - CGLIB 사용 
+                - 보통 인터페이스를 사용하지않을때, 클래스 레벨의 프록시를 사용하도록해줌(런타임 바이트 코드 생성기법을 이용해서 적용함)
+                - 상속해서 프록시를 만드는 개념이기때문에, final로 선언된 클래스는 안됨
+                - public으로 정의된 모든 메소드에 적용이 되기때문에, 수정자와 같은, 트랜잭션적용이 필요없는 메소드도 적용이 됨
+                - @EnableTransactionManager에 Proxy-target-class를 true로 변경해야하고(기본값 false) 인터페이스가 아닌 클래스에 선언해야한다
+                  - 만약 인터페이스에 적용하고 proxy target class를 true로햇다면 트랜잭션 안먹는다
+                  - 또한 proxy target class를 별도로 설정하지않고 클래스에만 선언하게되면 JDK 다이내믹 프록시로 진행됨
+            - AOP 방식(프록시 vs AspectJ)
+              - 프록시
+                - 스프링의 AOP 방식
+                - CGLib든 JDK 다이내믹 프록시든 모두 어쨋든 프록시 사용하는것.. 그래서 해당 클래스 내부에서 바로 트랜잭션 적용되어있는 자신을 호출하면 트랜잭션 안먹는다..(타깃오브젝트의 자기호출) 외부에서 호출해주어야함..
+              - AspectJ
+                - 프록시를 타깃 오브젝트 앞에 두는 방식이 아닌, 타깃 오브젝트 자체를 조작해서 부가기능을 직접 넣는 방식. 처음부터 타깃 오브젝트의 클래스에 부가기능을 가진 소스코드가 있었던 것처럼 만들어줌
+                - 프록시 방식을 사용할때 외부에서 호출해주어야하는 한계점을 이를 통해서 해결가능
+                - @EnableTransactionManager에 mode를 aspectJ로 해주어야함
+                  - 클래스 레벨, 클래스 메소드레벨에 적용해야함(인터페이스x)       
+      - 트랜잭션 속성
+        - 전파(propagation)
+          - 트랜잭션을 시작하거나 기존 트랜잭션에 참여하는 방법을 결정하는 속성
+        - 격리수준(isolation)
+          - 트랜잭션이 진행될때 트랜잭션의 작업결과를 여타 트랜잭션에게 어떻게 노출할 것인지를 결정
+          - 예를들어, 격리수준이 REPEATABLE_READ라면, 내가 읽은 데이터를 다른 트랜잭션이 수정하는것을 막아줌. 하지만 다른 트랜잭션이 새로운 로우를 추가하는것은 제한하지않는다..
+        - 제한시간(timeout)
+        - 읽기전용(read-only)
+          - 성능 최적화도된다함..
+          - 쓰기작업 막을수있음
+        - 롤백예외(rollbackFor)
+          - 특정 에러클래스를 발견하면 롤백하라!
+          - 기본적으로 런타임에러만 롤백하고, checked error는 롤백대상이 아닌데, 여기서 지정해주면 해당 checked error도 롤백대상이됨
+          - @Transactional(rollbackFor=NoSuchMemberException.class)
+        - 커밋예외
+          - 런타임 예외라도 발견하면 롤백하지말고 커밋해!
+          - 사용방법은 롤백예외랑 동일
+      - 데이터 엑세스 기술 트랜잭션의 통합
+        - 트랜잭션 매니저별 조합가능기술
+          - 하나의 트랜잭션 매니저를 사용해서 여러 DA 기술이 짬뽕되어있는 상태에서도 트랜잭션 적용가능!
+          - 물론, ***같은 Datasource***를 봐야함!
+          - 두개 이상의 여러DB 사용할때도 트랜잭션 필요하다면 JTA 사용해야함 
+        - ORM과 비ORM DAO를 함께 사용할때 주의사항
+          - ORM은 바로 DB에 반영하지않고 캐시로 수행해야할 작업을 가지고있다가 일괄적으로 반영한다. 그로인해서 비ORM과 서비스내에 같이 있다면 생각했던 결과와 다를수있다(비ORM은 바로 DB에 반영)
+          - 이를 해결하기위해 비ORM과 같이 사용할때는 ORM의 flush()를 사용해서 바로 DB에 반영시켜주는것이 좋다. (이또한 AOP로 셋팅이 가능하다하는데, 자세한건 JPA와 같은 ORM 스터디가 필요할듯!)
+           
+  - 2장을 통한 기타 팁
+    - 서버가 제공해주는 DB풀을 사용해야하는 경우에는 JNDI를 통해 서버의 DataSource에 접근!
+    - ORM : 오브젝트와 RDB사이에 존재하는 개념과 접근 방법, 성격의 차이 때문에 요구되는 불편한 작업을 제거해줘서, 자바 개발자가 오브젝트를 가지고 RDB에 적절한 형태로 변환하거나 반대로, RDB에 저장되어 있는 정보를 자바 오브젝트가 다루기 쉬운 형태로 변환해주는 기술!
+      - ORM 사용하면 SQL문장을 직접 작성x
+      - 즉, 쉽게 이야기하면 자바 오브젝트와 RDB사이에 ORM 프레임워크가 적절히 맵핑해주어, 데이터를 오브젝트 관점에서 핸들링 할수있는것!
+      - @EnableTransactionManager를 통해서 트랜잭션 AOP관련한 인프라 빈들이 등록됨.. 스프링부트에서는 jdbc사용하면 자동으로 등록이되는듯..
